plain Rhino 17R3 without any patches (formatted)