@@ -37,6 +37,7 @@
  * ***** END LICENSE BLOCK ***** */
 
 // API class
+
 package org.mozilla.javascript;
 
 import java.beans.PropertyChangeEvent;
@@ -49,25 +50,33 @@ import java.io.StringWriter;
 import java.io.Writer;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
-import java.util.Hashtable;
+import java.util.Map;
+import java.util.HashMap;
+import java.util.Set;
+import java.util.HashSet;
 import java.util.Locale;
 
+import org.mozilla.javascript.ast.AstRoot;
+import org.mozilla.javascript.ast.ScriptNode;
 import org.mozilla.javascript.debug.DebuggableScript;
 import org.mozilla.javascript.debug.Debugger;
 import org.mozilla.javascript.xml.XMLLib;
 
 /**
- * This class represents the runtime context of an executing script. Before
- * executing a script, an instance of Context must be created and associated
- * with the thread that will be executing the script. The Context will be used
- * to store information about the executing of the script such as the call
- * stack. Contexts are associated with the current thread using the
+ * This class represents the runtime context of an executing script.
+ * 
+ * Before executing a script, an instance of Context must be created and
+ * associated with the thread that will be executing the script. The Context
+ * will be used to store information about the executing of the script such as
+ * the call stack. Contexts are associated with the current thread using the
  * {@link #call(ContextAction)} or {@link #enter()} methods.
  * <p>
+ * 
  * Different forms of script execution are supported. Scripts may be evaluated
  * from the source directly, or first compiled and then later executed.
  * Interactive execution is also supported.
  * <p>
+ * 
  * Some aspects of script execution, such as type conversions and object
  * creation, may be accessed directly through methods of Context.
  * 
@@ -78,8 +87,9 @@ import org.mozilla.javascript.xml.XMLLib;
 
 public class Context {
 	/**
-	 * Language versions. All integral values are reserved for future version
-	 * numbers.
+	 * Language versions.
+	 * 
+	 * All integral values are reserved for future version numbers.
 	 */
 
 	/**
@@ -128,6 +138,16 @@ public class Context {
 	public static final int VERSION_1_6 = 160;
 
 	/**
+	 * JavaScript 1.7
+	 */
+	public static final int VERSION_1_7 = 170;
+
+	/**
+	 * JavaScript 1.8
+	 */
+	public static final int VERSION_1_8 = 180;
+
+	/**
 	 * Controls behaviour of <tt>Date.prototype.getYear()</tt>. If
 	 * <tt>hasFeature(FEATURE_NON_ECMA_GET_YEAR)</tt> returns true,
 	 * Date.prototype.getYear subtructs 1900 only if 1900 <= date < 2000. The
@@ -151,8 +171,9 @@ public class Context {
 	 * Control if reserved keywords are treated as identifiers. If
 	 * <tt>hasFeature(RESERVED_KEYWORD_AS_IDENTIFIER)</tt> returns true, treat
 	 * future reserved keyword (see Ecma-262, section 7.5.3) as ordinary
-	 * identifiers but warn about this usage. By default
-	 * {@link #hasFeature(int)} returns false.
+	 * identifiers but warn about this usage.
+	 * 
+	 * By default {@link #hasFeature(int)} returns false.
 	 */
 	public static final int FEATURE_RESERVED_KEYWORD_AS_IDENTIFIER = 3;
 
@@ -183,7 +204,9 @@ public class Context {
 	 * while <tt>x.__proto__ = y</tt> changes the prototype chain of the object
 	 * <tt>x</tt> to point to <tt>y</tt>, <tt>x["__proto__"] = y</tt> simply
 	 * assigns a new value to the property <tt>__proto__</tt> in <tt>x</tt> even
-	 * when the feature is on. By default {@link #hasFeature(int)} returns true.
+	 * when the feature is on.
+	 * 
+	 * By default {@link #hasFeature(int)} returns true.
 	 */
 	public static final int FEATURE_PARENT_PROTO_PROPERTIES = 5;
 
@@ -226,7 +249,7 @@ public class Context {
 	/**
 	 * Control if strict variable mode is enabled. When the feature is on Rhino
 	 * reports runtime errors if assignment to a global variable that does not
-	 * exist is executed. When the feature is off such assignments creates new
+	 * exist is executed. When the feature is off such assignments create a new
 	 * variable in the global scope as required by ECMA 262.
 	 * <p>
 	 * By default {@link #hasFeature(int)} returns false.
@@ -251,12 +274,12 @@ public class Context {
 	 * When the feature is on Rhino will add a "fileName" and "lineNumber"
 	 * properties to Error objects automatically. When the feature is off, you
 	 * have to explicitly pass them as the second and third argument to the
-	 * Error constructor. Note that neither behaviour is fully ECMA 262
-	 * compliant (as 262 doesn't specify a three-arg constructor), but keeping
-	 * the feature off results in Error objects that don't have additional
-	 * non-ECMA properties when constructed using the ECMA-defined single-arg
-	 * constructor and is thus desirable if a stricter ECMA compliance is
-	 * desired, specifically adherence to the point 15.11.5. of the standard.
+	 * Error constructor. Note that neither behavior is fully ECMA 262 compliant
+	 * (as 262 doesn't specify a three-arg constructor), but keeping the feature
+	 * off results in Error objects that don't have additional non-ECMA
+	 * properties when constructed using the ECMA-defined single-arg constructor
+	 * and is thus desirable if a stricter ECMA compliance is desired,
+	 * specifically adherence to the point 15.11.5. of the standard.
 	 * <p>
 	 * By default {@link #hasFeature(int)} returns false.
 	 * 
@@ -283,8 +306,20 @@ public class Context {
 	 */
 	public static final int FEATURE_WARNING_AS_ERROR = 12;
 
-	public static final String languageVersionProperty = "language version";
+	/**
+	 * Enables enhanced access to Java. Specifically, controls whether private
+	 * and protected members can be accessed, and whether scripts can catch all
+	 * Java exceptions.
+	 * <p>
+	 * Note that this feature should only be enabled for trusted scripts.
+	 * <p>
+	 * By default {@link #hasFeature(int)} returns false.
+	 * 
+	 * @since 1.7 Release 1
+	 */
+	public static final int FEATURE_ENHANCED_JAVA_ACCESS = 13;
 
+	public static final String languageVersionProperty = "language version";
 	public static final String errorReporterProperty = "error reporter";
 
 	/**
@@ -293,27 +328,57 @@ public class Context {
 	public static final Object[] emptyArgs = ScriptRuntime.emptyArgs;
 
 	/**
-	 * Create a new Context. Note that the Context must be associated with a
-	 * thread before it can be used to execute a script.
+	 * Creates a new Context. The context will be associated with the
+	 * {@link ContextFactory#getGlobal() global context factory}.
 	 * 
-	 * @see #enter()
-	 * @see #call(ContextAction)
+	 * Note that the Context must be associated with a thread before it can be
+	 * used to execute a script.
+	 * 
+	 * @deprecated this constructor is deprecated because it creates a
+	 *             dependency on a static singleton context factory. Use
+	 *             {@link ContextFactory#enter()} or
+	 *             {@link ContextFactory#call(ContextAction)} instead. If you
+	 *             subclass this class, consider using
+	 *             {@link #Context(ContextFactory)} constructor instead in the
+	 *             subclasses' constructors.
 	 */
 	public Context() {
+		this(ContextFactory.getGlobal());
+	}
+
+	/**
+	 * Creates a new context. Provided as a preferred super constructor for
+	 * subclasses in place of the deprecated default public constructor.
+	 * 
+	 * @param factory
+	 *            the context factory associated with this context (most likely,
+	 *            the one that created the context). Can not be null. The
+	 *            context features are inherited from the factory, and the
+	 *            context will also otherwise use its factory's services.
+	 * @throws IllegalArgumentException
+	 *             if factory parameter is null.
+	 */
+	protected Context(ContextFactory factory) {
+		if (factory == null) {
+			throw new IllegalArgumentException("factory == null");
+		}
+		this.factory = factory;
 		setLanguageVersion(VERSION_DEFAULT);
 		optimizationLevel = codegenClass != null ? 0 : -1;
 		maximumInterpreterStackDepth = Integer.MAX_VALUE;
 	}
 
 	/**
-	 * Get the current Context. The current Context is per-thread; this method
-	 * looks up the Context associated with the current thread.
+	 * Get the current Context.
+	 * 
+	 * The current Context is per-thread; this method looks up the Context
+	 * associated with the current thread.
 	 * <p>
 	 * 
 	 * @return the Context associated with the current thread, or null if no
 	 *         context is associated with the current thread.
-	 * @see org.mozilla.javascript.Context#enter()
-	 * @see org.mozilla.javascript.Context#exit()
+	 * @see ContextFactory#enterContext()
+	 * @see ContextFactory#call(ContextAction)
 	 */
 	public static Context getCurrentContext() {
 		Object helper = VMBridge.instance.getThreadContextHelper();
@@ -321,41 +386,8 @@ public class Context {
 	}
 
 	/**
-	 * Get a context associated with the current thread, creating one if need
-	 * be. The Context stores the execution state of the JavaScript engine, so
-	 * it is required that the context be entered before execution may begin.
-	 * Once a thread has entered a Context, then getCurrentContext() may be
-	 * called to find the context that is associated with the current thread.
-	 * <p>
-	 * Calling <code>enter()</code> will return either the Context currently
-	 * associated with the thread, or will create a new context and associate it
-	 * with the current thread. Each call to <code>enter()</code> must have a
-	 * matching call to <code>exit()</code>. For example,
-	 * 
-	 * <pre>
-	 *      Context cx = Context.enter();
-	 *      try {
-	 *          ...
-	 *          cx.evaluateString(...);
-	 *      } finally {
-	 *          Context.exit();
-	 *      }
-	 * </pre>
-	 * 
-	 * Instead of using <tt>enter()</tt>, <tt>exit()</tt> pair consider using
-	 * {@link #call(ContextAction)} which guarantees proper association of
-	 * Context instances with the current thread and is faster. With this method
-	 * the above example becomes:
-	 * 
-	 * <pre>
-	 *      Context.call(new ContextAction() {
-	 *          public Object run(Context cx) {
-	 *              ...
-	 *              cx.evaluateString(...);
-	 *              return null;
-	 *          }
-	 *      });
-	 * </pre>
+	 * Same as calling {@link ContextFactory#enterContext()} on the global
+	 * ContextFactory instance.
 	 * 
 	 * @return a Context associated with the current thread
 	 * @see #getCurrentContext()
@@ -378,8 +410,10 @@ public class Context {
 	 * @param cx
 	 *            a Context to associate with the thread if possible
 	 * @return a Context associated with the current thread
-	 * @see #enter()
-	 * @see #call(ContextAction)
+	 * @deprecated use {@link ContextFactory#enterContext(Context)} instead as
+	 *             this method relies on usage of a static singleton "global"
+	 *             ContextFactory.
+	 * @see ContextFactory#enterContext(Context)
 	 * @see ContextFactory#call(ContextAction)
 	 */
 	public static Context enter(Context cx) {
@@ -390,81 +424,54 @@ public class Context {
 		Object helper = VMBridge.instance.getThreadContextHelper();
 		Context old = VMBridge.instance.getContext(helper);
 		if (old != null) {
-			if (cx != null && cx != old && cx.enterCount != 0) {
-				// The suplied context must be the context for
-				// the current thread if it is already entered
-				throw new IllegalArgumentException(
-						"Cannot enter Context active on another thread");
-			}
-			if (old.factory != null) {
-				// Context with associated factory will be released
-				// automatically and does not need to change enterCount
-				return old;
-			}
-			if (old.sealed)
-				onSealedMutation();
 			cx = old;
 		} else {
 			if (cx == null) {
 				cx = factory.makeContext();
-			} else {
-				if (cx.sealed)
-					onSealedMutation();
-			}
-			if (cx.enterCount != 0 || cx.factory != null) {
-				throw new IllegalStateException();
-			}
-
-			if (!cx.creationEventWasSent) {
-				cx.creationEventWasSent = true;
+				if (cx.enterCount != 0) {
+					throw new IllegalStateException(
+							"factory.makeContext() returned Context instance already associated with some thread");
+				}
 				factory.onContextCreated(cx);
+				if (factory.isSealed() && !cx.isSealed()) {
+					cx.seal(null);
+				}
+			} else {
+				if (cx.enterCount != 0) {
+					throw new IllegalStateException(
+							"can not use Context instance already associated with some thread");
+				}
 			}
-		}
-
-		if (old == null) {
 			VMBridge.instance.setContext(helper, cx);
 		}
 		++cx.enterCount;
-
 		return cx;
 	}
 
 	/**
-	 * Exit a block of code requiring a Context. Calling <code>exit()</code>
-	 * will remove the association between the current thread and a Context if
-	 * the prior call to <code>enter()</code> on this thread newly associated a
+	 * Exit a block of code requiring a Context.
+	 * 
+	 * Calling <code>exit()</code> will remove the association between the
+	 * current thread and a Context if the prior call to
+	 * {@link ContextFactory#enterContext()} on this thread newly associated a
 	 * Context with this thread. Once the current thread no longer has an
 	 * associated Context, it cannot be used to execute JavaScript until it is
 	 * again associated with a Context.
 	 * 
-	 * @see org.mozilla.javascript.Context#enter()
-	 * @see #call(ContextAction)
-	 * @see ContextFactory#call(ContextAction)
+	 * @see ContextFactory#enterContext()
 	 */
 	public static void exit() {
-		exit(ContextFactory.getGlobal());
-	}
-
-	static void exit(ContextFactory factory) {
 		Object helper = VMBridge.instance.getThreadContextHelper();
 		Context cx = VMBridge.instance.getContext(helper);
 		if (cx == null) {
 			throw new IllegalStateException(
 					"Calling Context.exit without previous Context.enter");
 		}
-		if (cx.factory != null) {
-			// Context with associated factory will be released
-			// automatically and does not need to change enterCount
-			return;
-		}
 		if (cx.enterCount < 1)
 			Kit.codeBug();
-		if (cx.sealed)
-			onSealedMutation();
-		--cx.enterCount;
-		if (cx.enterCount == 0) {
+		if (--cx.enterCount == 0) {
 			VMBridge.instance.setContext(helper, null);
-			factory.onContextReleased(cx);
+			cx.factory.onContextReleased(cx);
 		}
 	}
 
@@ -476,6 +483,9 @@ public class Context {
 	 * associated with the thread during call to
 	 * {@link ContextAction#run(Context)}.
 	 * 
+	 * @deprecated use {@link ContextFactory#call(ContextAction)} instead as
+	 *             this method relies on usage of a static singleton "global"
+	 *             ContextFactory.
 	 * @return The result of {@link ContextAction#run(Context)}.
 	 */
 	public static Object call(ContextAction action) {
@@ -491,112 +501,50 @@ public class Context {
 	 * Context instance. The instance will be temporary associated with the
 	 * thread during call to {@link ContextAction#run(Context)}.
 	 * <p>
-	 * It is allowed to use null for <tt>factory</tt> argument in which case the
-	 * factory associated with the scope will be used to create new context
-	 * instances.
+	 * It is allowed but not advisable to use null for <tt>factory</tt> argument
+	 * in which case the global static singleton ContextFactory instance will be
+	 * used to create new context instances.
 	 * 
 	 * @see ContextFactory#call(ContextAction)
 	 */
-	public static Object call(ContextFactory factory, Callable callable,
-			Scriptable scope, Scriptable thisObj, Object[] args) {
+	public static Object call(ContextFactory factory, final Callable callable,
+			final Scriptable scope, final Scriptable thisObj,
+			final Object[] args) {
 		if (factory == null) {
 			factory = ContextFactory.getGlobal();
 		}
-
-		Object helper = VMBridge.instance.getThreadContextHelper();
-		Context cx = VMBridge.instance.getContext(helper);
-		if (cx != null) {
-			Object result;
-			if (cx.factory != null) {
-				result = callable.call(cx, scope, thisObj, args);
-			} else {
-				// Context was associated with the thread via Context.enter,
-				// set factory to make Context.enter/exit to be no-op
-				// during call
-				cx.factory = factory;
-				try {
-					result = callable.call(cx, scope, thisObj, args);
-				} finally {
-					cx.factory = null;
-				}
+		return call(factory, new ContextAction() {
+			public Object run(Context cx) {
+				return callable.call(cx, scope, thisObj, args);
 			}
-			return result;
-		}
-
-		cx = prepareNewContext(factory, helper);
-		try {
-			return callable.call(cx, scope, thisObj, args);
-		} finally {
-			releaseContext(helper, cx);
-		}
+		});
 	}
 
 	/**
-	 * The method implements {@links ContextFactory#call(ContextAction)} logic.
+	 * The method implements {@link ContextFactory#call(ContextAction)} logic.
 	 */
 	static Object call(ContextFactory factory, ContextAction action) {
-		Object helper = VMBridge.instance.getThreadContextHelper();
-		Context cx = VMBridge.instance.getContext(helper);
-
-		if (cx != null) {
-			if (cx.factory != null) {
-				return action.run(cx);
-			} else {
-				cx.factory = factory;
-				try {
-					return action.run(cx);
-				} finally {
-					cx.factory = null;
-				}
-			}
-		}
-
-		cx = prepareNewContext(factory, helper);
+		Context cx = enter(null, factory);
 		try {
 			return action.run(cx);
 		} finally {
-			releaseContext(helper, cx);
-		}
-	}
-
-	private static Context prepareNewContext(ContextFactory factory,
-			Object contextHelper) {
-		Context cx = factory.makeContext();
-		if (cx.factory != null || cx.enterCount != 0) {
-			throw new IllegalStateException(
-					"factory.makeContext() returned Context instance already associated with some thread");
-		}
-		cx.factory = factory;
-		factory.onContextCreated(cx);
-		if (factory.isSealed() && !cx.isSealed()) {
-			cx.seal(null);
-		}
-		VMBridge.instance.setContext(contextHelper, cx);
-		return cx;
-	}
-
-	private static void releaseContext(Object contextHelper, Context cx) {
-		VMBridge.instance.setContext(contextHelper, null);
-		try {
-			cx.factory.onContextReleased(cx);
-		} finally {
-			cx.factory = null;
+			exit();
 		}
 	}
 
 	/**
 	 * @deprecated
-	 * @see ContextFactory#addListener(ContextFactory.Listener)
+	 * @see ContextFactory#addListener(org.mozilla.javascript.ContextFactory.Listener)
 	 * @see ContextFactory#getGlobal()
 	 */
 	public static void addContextListener(ContextListener listener) {
 		// Special workaround for the debugger
 		String DBG = "org.mozilla.javascript.tools.debugger.Main";
 		if (DBG.equals(listener.getClass().getName())) {
-			Class cl = listener.getClass();
-			Class factoryClass = Kit
+			Class<?> cl = listener.getClass();
+			Class<?> factoryClass = Kit
 					.classOrNull("org.mozilla.javascript.ContextFactory");
-			Class[] sig = { factoryClass };
+			Class<?>[] sig = { factoryClass };
 			Object[] args = { ContextFactory.getGlobal() };
 			try {
 				Method m = cl.getMethod("attachTo", sig);
@@ -614,7 +562,7 @@ public class Context {
 
 	/**
 	 * @deprecated
-	 * @see ContextFactory#removeListener(ContextFactory.Listener)
+	 * @see ContextFactory#removeListener(org.mozilla.javascript.ContextFactory.Listener)
 	 * @see ContextFactory#getGlobal()
 	 */
 	public static void removeContextListener(ContextListener listener) {
@@ -622,16 +570,10 @@ public class Context {
 	}
 
 	/**
-	 * Return {@link ContextFactory} instance used to create this Context or the
-	 * result of {@link ContextFactory#getGlobal()} if no factory was used for
-	 * Context creation.
+	 * Return {@link ContextFactory} instance used to create this Context.
 	 */
 	public final ContextFactory getFactory() {
-		ContextFactory result = factory;
-		if (result == null) {
-			result = ContextFactory.getGlobal();
-		}
-		return result;
+		return factory;
 	}
 
 	/**
@@ -701,6 +643,7 @@ public class Context {
 
 	/**
 	 * Set the language version.
+	 * 
 	 * <p>
 	 * Setting the language version will affect functions and scripts compiled
 	 * subsequently. See the overview documentation for version-specific
@@ -716,7 +659,7 @@ public class Context {
 		Object listeners = propertyListeners;
 		if (listeners != null && version != this.version) {
 			firePropertyChangeImpl(listeners, languageVersionProperty,
-					new Integer(this.version), new Integer(version));
+					Integer.valueOf(this.version), Integer.valueOf(version));
 		}
 		this.version = version;
 	}
@@ -731,6 +674,8 @@ public class Context {
 		case VERSION_1_4:
 		case VERSION_1_5:
 		case VERSION_1_6:
+		case VERSION_1_7:
+		case VERSION_1_8:
 			return true;
 		}
 		return false;
@@ -745,15 +690,12 @@ public class Context {
 
 	/**
 	 * Get the implementation version.
+	 * 
 	 * <p>
 	 * The implementation version is of the form
 	 * 
 	 * <pre>
-	 *    &quot;&lt;i&gt;name langVer&lt;/i&gt;
-	 * <code>
-	 * release
-	 * </code>
-	 *  &lt;i&gt;relNum date&lt;/i&gt;&quot;
+	 * &quot;&lt;i&gt;name langVer&lt;/i&gt; &lt;code&gt;release&lt;/code&gt; &lt;i&gt;relNum date&lt;/i&gt;&quot;
 	 * </pre>
 	 * 
 	 * where <i>name</i> is the name of the product, <i>langVer</i> is the
@@ -1062,13 +1004,17 @@ public class Context {
 	}
 
 	/**
-	 * Initialize the standard objects. Creates instances of the standard
-	 * objects and their constructors (Object, String, Number, Date, etc.),
-	 * setting up 'scope' to act as a global object as in ECMA 15.1.
+	 * Initialize the standard objects.
+	 * 
+	 * Creates instances of the standard objects and their constructors (Object,
+	 * String, Number, Date, etc.), setting up 'scope' to act as a global object
+	 * as in ECMA 15.1.
 	 * <p>
+	 * 
 	 * This method must be called to initialize a scope before scripts can be
 	 * evaluated in that scope.
 	 * <p>
+	 * 
 	 * This method does not affect the Context it is called upon.
 	 * 
 	 * @return the initialized scope
@@ -1078,13 +1024,17 @@ public class Context {
 	}
 
 	/**
-	 * Initialize the standard objects. Creates instances of the standard
-	 * objects and their constructors (Object, String, Number, Date, etc.),
-	 * setting up 'scope' to act as a global object as in ECMA 15.1.
+	 * Initialize the standard objects.
+	 * 
+	 * Creates instances of the standard objects and their constructors (Object,
+	 * String, Number, Date, etc.), setting up 'scope' to act as a global object
+	 * as in ECMA 15.1.
 	 * <p>
+	 * 
 	 * This method must be called to initialize a scope before scripts can be
 	 * evaluated in that scope.
 	 * <p>
+	 * 
 	 * This method does not affect the Context it is called upon.
 	 * 
 	 * @param scope
@@ -1099,15 +1049,20 @@ public class Context {
 	}
 
 	/**
-	 * Initialize the standard objects. Creates instances of the standard
-	 * objects and their constructors (Object, String, Number, Date, etc.),
-	 * setting up 'scope' to act as a global object as in ECMA 15.1.
+	 * Initialize the standard objects.
+	 * 
+	 * Creates instances of the standard objects and their constructors (Object,
+	 * String, Number, Date, etc.), setting up 'scope' to act as a global object
+	 * as in ECMA 15.1.
 	 * <p>
+	 * 
 	 * This method must be called to initialize a scope before scripts can be
 	 * evaluated in that scope.
 	 * <p>
+	 * 
 	 * This method does not affect the Context it is called upon.
 	 * <p>
+	 * 
 	 * This form of the method also allows for creating "sealed" standard
 	 * objects. An object that is sealed cannot have properties added, changed,
 	 * or removed. This is useful to create a "superglobal" that can be shared
@@ -1138,8 +1093,10 @@ public class Context {
 	}
 
 	/**
-	 * Evaluate a JavaScript source string. The provided source name and line
-	 * number are used for error messages and for producing debug information.
+	 * Evaluate a JavaScript source string.
+	 * 
+	 * The provided source name and line number are used for error messages and
+	 * for producing debug information.
 	 * 
 	 * @param scope
 	 *            the scope to execute in
@@ -1168,8 +1125,9 @@ public class Context {
 	}
 
 	/**
-	 * Evaluate a reader as JavaScript source. All characters of the reader are
-	 * consumed.
+	 * Evaluate a reader as JavaScript source.
+	 * 
+	 * All characters of the reader are consumed.
 	 * 
 	 * @param scope
 	 *            the scope to execute in
@@ -1184,6 +1142,7 @@ public class Context {
 	 *            the origin or owner of the script. For implementations that
 	 *            don't care about security, this value may be null.
 	 * @return the result of evaluating the source
+	 * 
 	 * @exception IOException
 	 *                if an IOException was generated by the Reader
 	 */
@@ -1200,10 +1159,117 @@ public class Context {
 	}
 
 	/**
+	 * Execute script that may pause execution by capturing a continuation.
+	 * Caller must be prepared to catch a ContinuationPending exception and
+	 * resume execution by calling
+	 * {@link #resumeContinuation(Object, Scriptable, Object)}.
+	 * 
+	 * @param script
+	 *            The script to execute. Script must have been compiled with
+	 *            interpreted mode (optimization level -1)
+	 * @param scope
+	 *            The scope to execute the script against
+	 * @throws ContinuationPending
+	 *             if the script calls a function that results in a call to
+	 *             {@link #captureContinuation()}
+	 * @since 1.7 Release 2
+	 */
+	public Object executeScriptWithContinuations(Script script, Scriptable scope)
+			throws ContinuationPending {
+		if (!(script instanceof InterpretedFunction)
+				|| !((InterpretedFunction) script).isScript()) {
+			// Can only be applied to scripts
+			throw new IllegalArgumentException("Script argument was not"
+					+ " a script or was not created by interpreted mode ");
+		}
+		return callFunctionWithContinuations((InterpretedFunction) script,
+				scope, ScriptRuntime.emptyArgs);
+	}
+
+	/**
+	 * Call function that may pause execution by capturing a continuation.
+	 * Caller must be prepared to catch a ContinuationPending exception and
+	 * resume execution by calling
+	 * {@link #resumeContinuation(Object, Scriptable, Object)}.
+	 * 
+	 * @param function
+	 *            The function to call. The function must have been compiled
+	 *            with interpreted mode (optimization level -1)
+	 * @param scope
+	 *            The scope to execute the script against
+	 * @param args
+	 *            The arguments for the function
+	 * @throws ContinuationPending
+	 *             if the script calls a function that results in a call to
+	 *             {@link #captureContinuation()}
+	 * @since 1.7 Release 2
+	 */
+	public Object callFunctionWithContinuations(Callable function,
+			Scriptable scope, Object[] args) throws ContinuationPending {
+		if (!(function instanceof InterpretedFunction)) {
+			// Can only be applied to scripts
+			throw new IllegalArgumentException("Function argument was not"
+					+ " created by interpreted mode ");
+		}
+		if (ScriptRuntime.hasTopCall(this)) {
+			throw new IllegalStateException("Cannot have any pending top "
+					+ "calls when executing a script with continuations");
+		}
+		// Annotate so we can check later to ensure no java code in
+		// intervening frames
+		isContinuationsTopCall = true;
+		return ScriptRuntime.doTopCall(function, this, scope, scope, args);
+	}
+
+	/**
+	 * Capture a continuation from the current execution. The execution must
+	 * have been started via a call to
+	 * {@link #executeScriptWithContinuations(Script, Scriptable)} or
+	 * {@link #callFunctionWithContinuations(Callable, Scriptable, Object[])}.
+	 * This implies that the code calling this method must have been called as a
+	 * function from the JavaScript script. Also, there cannot be any
+	 * non-JavaScript code between the JavaScript frames (e.g., a call to
+	 * eval()). The ContinuationPending exception returned must be thrown.
+	 * 
+	 * @return A ContinuationPending exception that must be thrown
+	 * @since 1.7 Release 2
+	 */
+	public ContinuationPending captureContinuation() {
+		return new ContinuationPending(Interpreter.captureContinuation(this));
+	}
+
+	/**
+	 * Restarts execution of the JavaScript suspended at the call to
+	 * {@link #captureContinuation()}. Execution of the code will resume with
+	 * the functionResult as the result of the call that captured the
+	 * continuation. Execution of the script will either conclude normally and
+	 * the result returned, another continuation will be captured and thrown, or
+	 * the script will terminate abnormally and throw an exception.
+	 * 
+	 * @param continuation
+	 *            The value returned by
+	 *            {@link ContinuationPending#getContinuation()}
+	 * @param functionResult
+	 *            This value will appear to the code being resumed as the result
+	 *            of the function that captured the continuation
+	 * @throws ContinuationPending
+	 *             if another continuation is captured before the code
+	 *             terminates
+	 * @since 1.7 Release 2
+	 */
+	public Object resumeContinuation(Object continuation, Scriptable scope,
+			Object functionResult) throws ContinuationPending {
+		Object[] args = { functionResult };
+		return Interpreter.restartContinuation(
+				(org.mozilla.javascript.NativeContinuation) continuation, this,
+				scope, args);
+	}
+
+	/**
 	 * Check whether a string is ready to be compiled.
 	 * <p>
 	 * stringIsCompilableUnit is intended to support interactive compilation of
-	 * javascript. If compiling the string would result in an error that might
+	 * JavaScript. If compiling the string would result in an error that might
 	 * be fixed by appending more source, this method returns false. In every
 	 * other case, it returns true.
 	 * <p>
@@ -1290,7 +1356,8 @@ public class Context {
 	 * @param sourceName
 	 *            a string describing the source, such as a filename
 	 * @param lineno
-	 *            the starting line number for reporting errors
+	 *            the starting line number for reporting errors. Use 0 if the
+	 *            line number is unknown.
 	 * @param securityDomain
 	 *            an arbitrary object that specifies security information about
 	 *            the origin or owner of the script. For implementations that
@@ -1308,7 +1375,7 @@ public class Context {
 				securityDomain);
 	}
 
-	final Script compileString(String source, Interpreter compiler,
+	final Script compileString(String source, Evaluator compiler,
 			ErrorReporter compilationErrorReporter, String sourceName,
 			int lineno, Object securityDomain) {
 		try {
@@ -1348,7 +1415,7 @@ public class Context {
 	}
 
 	final Function compileFunction(Scriptable scope, String source,
-			Interpreter compiler, ErrorReporter compilationErrorReporter,
+			Evaluator compiler, ErrorReporter compilationErrorReporter,
 			String sourceName, int lineno, Object securityDomain) {
 		try {
 			return (Function) compileImpl(scope, null, source, sourceName,
@@ -1405,6 +1472,7 @@ public class Context {
 	 * <p>
 	 * Decompiles the body a previously compiled JavaScript Function object to
 	 * canonical source, omitting the function header and trailing brace.
+	 * 
 	 * Returns '[native code]' if no decompilation information is available.
 	 * 
 	 * @param fun
@@ -1423,20 +1491,26 @@ public class Context {
 	}
 
 	/**
-	 * Create a new JavaScript object. Equivalent to evaluating "new Object()".
+	 * Create a new JavaScript object.
+	 * 
+	 * Equivalent to evaluating "new Object()".
 	 * 
 	 * @param scope
 	 *            the scope to search for the constructor and to evaluate
 	 *            against
 	 * @return the new object
 	 */
-	public final Scriptable newObject(Scriptable scope) {
-		return newObject(scope, "Object", ScriptRuntime.emptyArgs);
+	public Scriptable newObject(Scriptable scope) {
+		NativeObject result = new NativeObject();
+		ScriptRuntime.setBuiltinProtoAndParent(result, scope,
+				TopLevel.Builtins.Object);
+		return result;
 	}
 
 	/**
-	 * Create a new JavaScript object by executing the named constructor. The
-	 * call <code>newObject(scope, "Foo")</code> is equivalent to evaluating
+	 * Create a new JavaScript object by executing the named constructor.
+	 * 
+	 * The call <code>newObject(scope, "Foo")</code> is equivalent to evaluating
 	 * "new Foo()".
 	 * 
 	 * @param scope
@@ -1446,20 +1520,22 @@ public class Context {
 	 *            the name of the constructor to call
 	 * @return the new object
 	 */
-	public final Scriptable newObject(Scriptable scope, String constructorName) {
+	public Scriptable newObject(Scriptable scope, String constructorName) {
 		return newObject(scope, constructorName, ScriptRuntime.emptyArgs);
 	}
 
 	/**
 	 * Creates a new JavaScript object by executing the named constructor.
+	 * 
 	 * Searches <code>scope</code> for the named constructor, calls it with the
 	 * given arguments, and returns the result.
 	 * <p>
+	 * 
 	 * The code
 	 * 
 	 * <pre>
-	 * Object[] args = { &quot;a&quot;, &quot;b&quot; };
-	 * newObject(scope, &quot;Foo&quot;, args)
+	 * Object[] args = { "a", "b" };
+	 * newObject(scope, "Foo", args)
 	 * </pre>
 	 * 
 	 * is equivalent to evaluating "new Foo('a', 'b')", assuming that the Foo
@@ -1474,7 +1550,7 @@ public class Context {
 	 *            the array of arguments for the constructor
 	 * @return the new object
 	 */
-	public final Scriptable newObject(Scriptable scope, String constructorName,
+	public Scriptable newObject(Scriptable scope, String constructorName,
 			Object[] args) {
 		scope = ScriptableObject.getTopLevelScope(scope);
 		Function ctor = ScriptRuntime.getExistingCtor(this, scope,
@@ -1496,9 +1572,10 @@ public class Context {
 	 *            properties added dynamically).
 	 * @return the new array object
 	 */
-	public final Scriptable newArray(Scriptable scope, int length) {
+	public Scriptable newArray(Scriptable scope, int length) {
 		NativeArray result = new NativeArray(length);
-		ScriptRuntime.setObjectProtoAndParent(result, scope);
+		ScriptRuntime.setBuiltinProtoAndParent(result, scope,
+				TopLevel.Builtins.Array);
 		return result;
 	}
 
@@ -1513,11 +1590,12 @@ public class Context {
 	 *            Object[], not SomeObjectSubclass[].
 	 * @return the new array object.
 	 */
-	public final Scriptable newArray(Scriptable scope, Object[] elements) {
+	public Scriptable newArray(Scriptable scope, Object[] elements) {
 		if (elements.getClass().getComponentType() != ScriptRuntime.ObjectClass)
 			throw new IllegalArgumentException();
 		NativeArray result = new NativeArray(elements);
-		ScriptRuntime.setObjectProtoAndParent(result, scope);
+		ScriptRuntime.setBuiltinProtoAndParent(result, scope,
+				TopLevel.Builtins.Array);
 		return result;
 	}
 
@@ -1612,7 +1690,7 @@ public class Context {
 	 * @see #toObject(Object, Scriptable)
 	 */
 	public static Scriptable toObject(Object value, Scriptable scope,
-			Class staticType) {
+			Class<?> staticType) {
 		return ScriptRuntime.toObject(scope, value);
 	}
 
@@ -1674,7 +1752,7 @@ public class Context {
 	 * @throws EvaluatorException
 	 *             if the conversion cannot be performed
 	 */
-	public static Object jsToJava(Object value, Class desiredType)
+	public static Object jsToJava(Object value, Class<?> desiredType)
 			throws EvaluatorException {
 		return NativeJavaObject.coerceTypeImpl(desiredType, value);
 	}
@@ -1687,7 +1765,7 @@ public class Context {
 	 *             {@link #jsToJava(Object, Class)} throws
 	 *             {@link EvaluatorException} instead.
 	 */
-	public static Object toType(Object value, Class desiredType)
+	public static Object toType(Object value, Class<?> desiredType)
 			throws IllegalArgumentException {
 		try {
 			return jsToJava(value, desiredType);
@@ -1725,7 +1803,11 @@ public class Context {
 		}
 		// special handling of Error so scripts would not catch them
 		if (e instanceof Error) {
-			throw (Error) e;
+			Context cx = getContext();
+			if (cx == null
+					|| !cx.hasFeature(Context.FEATURE_ENHANCED_JAVA_ACCESS)) {
+				throw (Error) e;
+			}
 		}
 		if (e instanceof RhinoException) {
 			throw (RhinoException) e;
@@ -1790,6 +1872,7 @@ public class Context {
 	 * The optimization level is expressed as an integer between -1 and 9.
 	 * 
 	 * @since 1.3
+	 * 
 	 */
 	public final int getOptimizationLevel() {
 		return optimizationLevel;
@@ -1810,6 +1893,7 @@ public class Context {
 	 * @param optimizationLevel
 	 *            an integer indicating the level of optimization to perform
 	 * @since 1.3
+	 * 
 	 */
 	public final void setOptimizationLevel(int optimizationLevel) {
 		if (sealed)
@@ -1929,20 +2013,42 @@ public class Context {
 	 * @throws SecurityException
 	 *             if there is already a ClassShutter object for this Context
 	 */
-	public final void setClassShutter(ClassShutter shutter) {
+	public synchronized final void setClassShutter(ClassShutter shutter) {
 		if (sealed)
 			onSealedMutation();
 		if (shutter == null)
 			throw new IllegalArgumentException();
-		if (classShutter != null) {
+		if (hasClassShutter) {
 			throw new SecurityException("Cannot overwrite existing "
 					+ "ClassShutter object");
 		}
 		classShutter = shutter;
+		hasClassShutter = true;
 	}
 
-	final ClassShutter getClassShutter() {
+	final synchronized ClassShutter getClassShutter() {
 		return classShutter;
+	}
+
+	public interface ClassShutterSetter {
+		public void setClassShutter(ClassShutter shutter);
+
+		public ClassShutter getClassShutter();
+	}
+
+	public final synchronized ClassShutterSetter getClassShutterSetter() {
+		if (hasClassShutter)
+			return null;
+		hasClassShutter = true;
+		return new ClassShutterSetter() {
+			public void setClassShutter(ClassShutter shutter) {
+				classShutter = shutter;
+			}
+
+			public ClassShutter getClassShutter() {
+				return classShutter;
+			}
+		};
 	}
 
 	/**
@@ -1952,7 +2058,7 @@ public class Context {
 	 * values that can be later retrieved using the current thread.
 	 * <p>
 	 * Note that the values are maintained with the Context, so if the Context
-	 * is disassociated from the thread the values cannot be retreived. Also, if
+	 * is disassociated from the thread the values cannot be retrieved. Also, if
 	 * private data is to be maintained in this manner the key should be a
 	 * java.lang.Object whose reference is not divulged to untrusted code.
 	 * 
@@ -1961,9 +2067,9 @@ public class Context {
 	 * @return a value previously stored using putThreadLocal.
 	 */
 	public final Object getThreadLocal(Object key) {
-		if (hashtable == null)
+		if (threadLocalMap == null)
 			return null;
-		return hashtable.get(key);
+		return threadLocalMap.get(key);
 	}
 
 	/**
@@ -1975,12 +2081,12 @@ public class Context {
 	 * @param value
 	 *            the value to save
 	 */
-	public final void putThreadLocal(Object key, Object value) {
+	public synchronized final void putThreadLocal(Object key, Object value) {
 		if (sealed)
 			onSealedMutation();
-		if (hashtable == null)
-			hashtable = new Hashtable();
-		hashtable.put(key, value);
+		if (threadLocalMap == null)
+			threadLocalMap = new HashMap<Object, Object>();
+		threadLocalMap.put(key, value);
 	}
 
 	/**
@@ -1993,9 +2099,9 @@ public class Context {
 	public final void removeThreadLocal(Object key) {
 		if (sealed)
 			onSealedMutation();
-		if (hashtable == null)
+		if (threadLocalMap == null)
 			return;
-		hashtable.remove(key);
+		threadLocalMap.remove(key);
 	}
 
 	/**
@@ -2127,6 +2233,7 @@ public class Context {
 	 * @see #FEATURE_LOCATION_INFORMATION_IN_ERROR
 	 * @see #FEATURE_STRICT_MODE
 	 * @see #FEATURE_WARNING_AS_ERROR
+	 * @see #FEATURE_ENHANCED_JAVA_ACCESS
 	 */
 	public boolean hasFeature(int featureIndex) {
 		ContextFactory f = getFactory();
@@ -2136,9 +2243,10 @@ public class Context {
 	/**
 	 * Returns an object which specifies an E4X implementation to use within
 	 * this <code>Context</code>. Note that the XMLLib.Factory interface should
-	 * be considered experimental. The default implementation uses the
-	 * implementation provided by this <code>Context</code>'s
-	 * {@link ContextFactory}.
+	 * be considered experimental.
+	 * 
+	 * The default implementation uses the implementation provided by this
+	 * <code>Context</code>'s {@link ContextFactory}.
 	 * 
 	 * @return An XMLLib.Factory. Should not return <code>null</code> if
 	 *         {@link #FEATURE_E4X} is enabled. See {@link #hasFeature}.
@@ -2148,7 +2256,7 @@ public class Context {
 	}
 
 	/**
-	 * Get/Set threshold of executed instructions counter that triggers call to
+	 * Get threshold of executed instructions counter that triggers call to
 	 * <code>observeInstructionCount()</code>. When the threshold is zero,
 	 * instruction counting is disabled, otherwise each time the run-time
 	 * executes at least the threshold value of script instructions,
@@ -2158,12 +2266,46 @@ public class Context {
 		return instructionThreshold;
 	}
 
+	/**
+	 * Set threshold of executed instructions counter that triggers call to
+	 * <code>observeInstructionCount()</code>. When the threshold is zero,
+	 * instruction counting is disabled, otherwise each time the run-time
+	 * executes at least the threshold value of script instructions,
+	 * <code>observeInstructionCount()</code> will be called.
+	 * <p/>
+	 * Note that the meaning of "instruction" is not guaranteed to be consistent
+	 * between compiled and interpretive modes: executing a given script or
+	 * function in the different modes will result in different instruction
+	 * counts against the threshold. {@link #setGenerateObserverCount} is called
+	 * with true if <code>threshold</code> is greater than zero, false
+	 * otherwise.
+	 * 
+	 * @param threshold
+	 *            The instruction threshold
+	 */
 	public final void setInstructionObserverThreshold(int threshold) {
 		if (sealed)
 			onSealedMutation();
 		if (threshold < 0)
 			throw new IllegalArgumentException();
 		instructionThreshold = threshold;
+		setGenerateObserverCount(threshold > 0);
+	}
+
+	/**
+	 * Turn on or off generation of code with callbacks to track the count of
+	 * executed instructions. Currently only affects JVM byte code generation:
+	 * this slows down the generated code, but code generated without the
+	 * callbacks will not be counted toward instruction thresholds. Rhino's
+	 * interpretive mode does instruction counting without inserting callbacks,
+	 * so there is no requirement to compile code differently.
+	 * 
+	 * @param generateObserverCount
+	 *            if true, generated code will contain calls to accumulate an
+	 *            estimate of the instructions executed.
+	 */
+	public void setGenerateObserverCount(boolean generateObserverCount) {
+		this.generateObserverCount = generateObserverCount;
 	}
 
 	/**
@@ -2172,9 +2314,6 @@ public class Context {
 	 * enabled and the counter reaches limit set by
 	 * <code>setInstructionObserverThreshold()</code>. The method is useful to
 	 * observe long running scripts and if necessary to terminate them.
-	 * <p>
-	 * The instruction counting support is available only for interpreted
-	 * scripts generated when the optimization level is set to -1.
 	 * <p>
 	 * The default implementation calls
 	 * {@link ContextFactory#observeInstructionCount(Context cx, int instructionCount)}
@@ -2221,7 +2360,7 @@ public class Context {
 				// Thread.getContextClassLoader can not load Rhino classes,
 				// try to use the loader of ContextFactory or Context
 				// subclasses.
-				Class fClass = f.getClass();
+				Class<?> fClass = f.getClass();
 				if (fClass != ScriptRuntime.ContextFactoryClass) {
 					loader = fClass.getClassLoader();
 				} else {
@@ -2248,7 +2387,7 @@ public class Context {
 		applicationClassLoader = loader;
 	}
 
-	/** ******** end of API ********* */
+	/********** end of API **********/
 
 	/**
 	 * Internal method that reports an error for missing calls to enter().
@@ -2264,10 +2403,12 @@ public class Context {
 
 	private Object compileImpl(Scriptable scope, Reader sourceReader,
 			String sourceString, String sourceName, int lineno,
-			Object securityDomain, boolean returnFunction,
-			Interpreter compiler, ErrorReporter compilationErrorReporter)
-			throws IOException {
-		if (securityDomain != null && securityController == null) {
+			Object securityDomain, boolean returnFunction, Evaluator compiler,
+			ErrorReporter compilationErrorReporter) throws IOException {
+		if (sourceName == null) {
+			sourceName = "unnamed script";
+		}
+		if (securityDomain != null && getSecurityController() == null) {
 			throw new IllegalArgumentException(
 					"securityDomain should be null if setSecurityController() was never called");
 		}
@@ -2296,16 +2437,16 @@ public class Context {
 		if (returnFunction) {
 			p.calledByCompileFunction = true;
 		}
-		ScriptOrFnNode tree;
+		AstRoot ast;
 		if (sourceString != null) {
-			tree = p.parse(sourceString, sourceName, lineno);
+			ast = p.parse(sourceString, sourceName, lineno);
 		} else {
-			tree = p.parse(sourceReader, sourceName, lineno);
+			ast = p.parse(sourceReader, sourceName, lineno);
 		}
 		if (returnFunction) {
-			if (!(tree.getFunctionCount() == 1 && tree.getFirstChild() != null && tree
-					.getFirstChild().getType() == Token.FUNCTION)) {
-				// XXX: the check just look for the first child
+			// parser no longer adds function to script node
+			if (!(ast.getFirstChild() != null && ast.getFirstChild().getType() == Token.FUNCTION)) {
+				// XXX: the check just looks for the first child
 				// and allows for more nodes after it for compatibility
 				// with sources like function() {};;;
 				throw new IllegalArgumentException(
@@ -2314,15 +2455,20 @@ public class Context {
 			}
 		}
 
+		IRFactory irf = new IRFactory(compilerEnv, compilationErrorReporter);
+		ScriptNode tree = irf.transformTree(ast);
+
+		// discard everything but the IR tree
+		p = null;
+		ast = null;
+		irf = null;
+
 		if (compiler == null) {
 			compiler = createCompiler();
 		}
 
-		String encodedSource = p.getEncodedSource();
-
-		Object bytecode = compiler.compile(compilerEnv, tree, encodedSource,
-				returnFunction);
-
+		Object bytecode = compiler.compile(compilerEnv, tree,
+				tree.getEncodedSource(), returnFunction);
 		if (debugger != null) {
 			if (sourceString == null)
 				Kit.codeBug();
@@ -2353,18 +2499,24 @@ public class Context {
 		}
 	}
 
-	private static Class codegenClass = Kit
+	private static Class<?> codegenClass = Kit
 			.classOrNull("org.mozilla.javascript.optimizer.Codegen");
+	private static Class<?> interpreterClass = Kit
+			.classOrNull("org.mozilla.javascript.Interpreter");
 
-	private Interpreter createCompiler() {
-		Interpreter result = null;
+	private Evaluator createCompiler() {
+		Evaluator result = null;
 		if (optimizationLevel >= 0 && codegenClass != null) {
-			result = (Interpreter) Kit.newInstanceOrNull(codegenClass);
+			result = (Evaluator) Kit.newInstanceOrNull(codegenClass);
 		}
 		if (result == null) {
-			result = new Interpreter();
+			result = createInterpreter();
 		}
 		return result;
+	}
+
+	static Evaluator createInterpreter() {
+		return (Evaluator) Kit.newInstanceOrNull(interpreterClass);
 	}
 
 	static String getSourcePositionFromStack(int[] linep) {
@@ -2372,7 +2524,9 @@ public class Context {
 		if (cx == null)
 			return null;
 		if (cx.lastInterpreterFrame != null) {
-			return Interpreter.getSourcePositionFromStack(cx, linep);
+			Evaluator evaluator = createInterpreter();
+			if (evaluator != null)
+				return evaluator.getSourcePositionFromStack(cx, linep);
 		}
 		/**
 		 * A bit of a hack, but the only way to get filename and line number
@@ -2417,7 +2571,7 @@ public class Context {
 
 	RegExpProxy getRegExpProxy() {
 		if (regExpProxy == null) {
-			Class cl = Kit
+			Class<?> cl = Kit
 					.classOrNull("org.mozilla.javascript.regexp.RegExpImpl");
 			if (cl != null) {
 				regExpProxy = (RegExpProxy) Kit.newInstanceOrNull(cl);
@@ -2454,8 +2608,8 @@ public class Context {
 		if (sealed)
 			onSealedMutation();
 		if (activationNames == null)
-			activationNames = new Hashtable(5);
-		activationNames.put(name, name);
+			activationNames = new HashSet<String>();
+		activationNames.add(name);
 	}
 
 	/**
@@ -2464,10 +2618,11 @@ public class Context {
 	 * 
 	 * @param name
 	 *            the name of the object to test
+	 * 
 	 * @return true if an function activation object is needed.
 	 */
 	public final boolean isActivationNeeded(String name) {
-		return activationNames != null && activationNames.containsKey(name);
+		return activationNames != null && activationNames.contains(name);
 	}
 
 	/**
@@ -2484,38 +2639,15 @@ public class Context {
 			activationNames.remove(name);
 	}
 
-	public static void setDispatchingEventsEnabled(boolean b) {
-		isDispatchingEventsEnabled = b;
-	}
-
-	public static boolean isDispatchingEventsEnabled() {
-		return isDispatchingEventsEnabled;
-	}
-
-	public static ClassLoader getClassLoader() {
-		return classLoader;
-	}
-
-	public static void setClassLoader(ClassLoader classLoader) {
-		Context.classLoader = classLoader;
-	}
-
-	private static ClassLoader classLoader;
-
-	static boolean isDispatchingEventsEnabled = true;
-
 	private static String implementationVersion;
 
-	private ContextFactory factory;
-
+	private final ContextFactory factory;
 	private boolean sealed;
-
 	private Object sealKey;
 
 	Scriptable topCallScope;
-
+	boolean isContinuationsTopCall;
 	NativeCall currentActivationCall;
-
 	XMLLib cachedXMLLib;
 
 	// for Objects, Arrays to tag themselves as being printed out,
@@ -2528,50 +2660,31 @@ public class Context {
 	int version;
 
 	private SecurityController securityController;
-
+	private boolean hasClassShutter;
 	private ClassShutter classShutter;
-
 	private ErrorReporter errorReporter;
-
 	RegExpProxy regExpProxy;
-
 	private Locale locale;
-
 	private boolean generatingDebug;
-
 	private boolean generatingDebugChanged;
-
 	private boolean generatingSource = true;
-
 	boolean compileFunctionsWithDynamicScopeFlag;
-
 	boolean useDynamicScope;
-
 	private int optimizationLevel;
-
 	private int maximumInterpreterStackDepth;
-
 	private WrapFactory wrapFactory;
-
 	Debugger debugger;
-
 	private Object debuggerData;
-
 	private int enterCount;
-
 	private Object propertyListeners;
-
-	private Hashtable hashtable;
-
+	private Map<Object, Object> threadLocalMap;
 	private ClassLoader applicationClassLoader;
-
-	private boolean creationEventWasSent;
 
 	/**
 	 * This is the list of names of objects forcing the creation of function
 	 * activation records.
 	 */
-	Hashtable activationNames;
+	Set<String> activationNames;
 
 	// For the interpreter to store the last frame for error reports etc.
 	Object lastInterpreterFrame;
@@ -2582,7 +2695,6 @@ public class Context {
 
 	// For instruction counting (interpreter only)
 	int instructionCount;
-
 	int instructionThreshold;
 
 	// It can be used to return the second index-like result from function
@@ -2593,4 +2705,7 @@ public class Context {
 
 	// It can be used to return the second Scriptable result from function
 	Scriptable scratchScriptable;
+
+	// Generate an observer count on compiled code
+	public boolean generateObserverCount = false;
 }
