@@ -40,7 +40,15 @@
 
 package org.mozilla.javascript;
 
-import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.Comparator;
+import java.util.Iterator;
+import java.util.LinkedHashSet;
+import java.util.List;
+import java.util.ListIterator;
+import java.util.NoSuchElementException;
+import java.util.Set;
 
 /**
  * This class implements the Array native object.
@@ -48,66 +56,67 @@ import java.util.ArrayList;
  * @author Norris Boyd
  * @author Mike McCabe
  */
-public class NativeArray extends IdScriptableObject implements Wrapper {
+public class NativeArray extends IdScriptableObject implements List {
 	static final long serialVersionUID = 7331366857676127338L;
 
 	/*
 	 * Optimization possibilities and open issues: - Long vs. double
-	 * schizophrenia. I suspect it might be better to use double throughout. -
-	 * Most array operations go through getElem or setElem (defined in this
-	 * file) to handle the full 2^32 range; it might be faster to have versions
-	 * of most of the loops in this file for the (infinitely more common) case
-	 * of indices < 2^31. - Functions that need a new Array call "new Array" in
-	 * the current scope rather than using a hardwired constructor; "Array"
-	 * could be redefined. It turns out that js calls the equivalent of
-	 * "new Array" in the current scope, except that it always gets at least an
-	 * object back, even when Array == null.
+	 * schizophrenia. I suspect it might be better to use double throughout.
+	 * 
+	 * - Functions that need a new Array call "new Array" in the current scope
+	 * rather than using a hardwired constructor; "Array" could be redefined. It
+	 * turns out that js calls the equivalent of "new Array" in the current
+	 * scope, except that it always gets at least an object back, even when
+	 * Array == null.
 	 */
 
-	private static final Object ARRAY_TAG = new Object();
-
-	private static final Integer NEGATIVE_ONE = new Integer(-1);
+	private static final Object ARRAY_TAG = "Array";
+	private static final Integer NEGATIVE_ONE = Integer.valueOf(-1);
 
 	static void init(Scriptable scope, boolean sealed) {
-		NativeArray prototype = new NativeArray();
-		prototype.exportAsJSClass(MAX_PROTOTYPE_ID, scope, sealed);
+		NativeArray obj = new NativeArray(0);
+		obj.exportAsJSClass(MAX_PROTOTYPE_ID, scope, sealed);
 	}
 
-	/**
-	 * Zero-parameter constructor: just used to create Array.prototype
-	 */
-	public NativeArray() {
-		dense = null;
-		this.length = 0;
+	static int getMaximumInitialCapacity() {
+		return maximumInitialCapacity;
 	}
 
-	public NativeArray(long length) {
-		int intLength = (int) length;
-		if (intLength == length && intLength > 0) {
-			if (intLength > maximumDenseLength)
-				intLength = maximumDenseLength;
+	static void setMaximumInitialCapacity(int maximumInitialCapacity) {
+		NativeArray.maximumInitialCapacity = maximumInitialCapacity;
+	}
+
+	public NativeArray(long lengthArg) {
+		denseOnly = lengthArg <= maximumInitialCapacity;
+		if (denseOnly) {
+			int intLength = (int) lengthArg;
+			if (intLength < DEFAULT_INITIAL_CAPACITY)
+				intLength = DEFAULT_INITIAL_CAPACITY;
 			dense = new Object[intLength];
-			for (int i = 0; i < intLength; i++)
-				dense[i] = NOT_FOUND;
+			Arrays.fill(dense, Scriptable.NOT_FOUND);
 		}
-		this.length = length;
+		length = lengthArg;
 	}
 
 	public NativeArray(Object[] array) {
+		denseOnly = true;
 		dense = array;
-		this.length = array.length;
+		length = array.length;
 	}
 
+	@Override
 	public String getClassName() {
 		return "Array";
 	}
 
 	private static final int Id_length = 1, MAX_INSTANCE_ID = 1;
 
+	@Override
 	protected int getMaxInstanceId() {
 		return MAX_INSTANCE_ID;
 	}
 
+	@Override
 	protected int findInstanceIdInfo(String s) {
 		if (s.equals("length")) {
 			return instanceIdInfo(DONTENUM | PERMANENT, Id_length);
@@ -115,6 +124,7 @@ public class NativeArray extends IdScriptableObject implements Wrapper {
 		return super.findInstanceIdInfo(s);
 	}
 
+	@Override
 	protected String getInstanceIdName(int id) {
 		if (id == Id_length) {
 			return "length";
@@ -122,6 +132,7 @@ public class NativeArray extends IdScriptableObject implements Wrapper {
 		return super.getInstanceIdName(id);
 	}
 
+	@Override
 	protected Object getInstanceIdValue(int id) {
 		if (id == Id_length) {
 			return ScriptRuntime.wrapNumber(length);
@@ -129,6 +140,7 @@ public class NativeArray extends IdScriptableObject implements Wrapper {
 		return super.getInstanceIdValue(id);
 	}
 
+	@Override
 	protected void setInstanceIdValue(int id, Object value) {
 		if (id == Id_length) {
 			setLength(value);
@@ -137,6 +149,43 @@ public class NativeArray extends IdScriptableObject implements Wrapper {
 		super.setInstanceIdValue(id, value);
 	}
 
+	@Override
+	protected void fillConstructorProperties(IdFunctionObject ctor) {
+		addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_join, "join", 1);
+		addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_reverse,
+				"reverse", 0);
+		addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_sort, "sort", 1);
+		addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_push, "push", 1);
+		addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_pop, "pop", 0);
+		addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_shift, "shift", 0);
+		addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_unshift,
+				"unshift", 1);
+		addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_splice, "splice",
+				2);
+		addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_concat, "concat",
+				1);
+		addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_slice, "slice", 2);
+		addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_indexOf,
+				"indexOf", 1);
+		addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_lastIndexOf,
+				"lastIndexOf", 1);
+		addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_every, "every", 1);
+		addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_filter, "filter",
+				1);
+		addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_forEach,
+				"forEach", 1);
+		addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_map, "map", 1);
+		addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_some, "some", 1);
+		addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_reduce, "reduce",
+				1);
+		addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_reduceRight,
+				"reduceRight", 1);
+		addIdFunctionProperty(ctor, ARRAY_TAG, ConstructorId_isArray,
+				"isArray", 1);
+		super.fillConstructorProperties(ctor);
+	}
+
+	@Override
 	protected void initPrototypeId(int id) {
 		String s;
 		int arity;
@@ -150,7 +199,7 @@ public class NativeArray extends IdScriptableObject implements Wrapper {
 			s = "toString";
 			break;
 		case Id_toLocaleString:
-			arity = 1;
+			arity = 0;
 			s = "toLocaleString";
 			break;
 		case Id_toSource:
@@ -174,11 +223,11 @@ public class NativeArray extends IdScriptableObject implements Wrapper {
 			s = "push";
 			break;
 		case Id_pop:
-			arity = 1;
+			arity = 0;
 			s = "pop";
 			break;
 		case Id_shift:
-			arity = 1;
+			arity = 0;
 			s = "shift";
 			break;
 		case Id_unshift:
@@ -186,7 +235,7 @@ public class NativeArray extends IdScriptableObject implements Wrapper {
 			s = "unshift";
 			break;
 		case Id_splice:
-			arity = 1;
+			arity = 2;
 			s = "splice";
 			break;
 		case Id_concat:
@@ -194,7 +243,7 @@ public class NativeArray extends IdScriptableObject implements Wrapper {
 			s = "concat";
 			break;
 		case Id_slice:
-			arity = 1;
+			arity = 2;
 			s = "slice";
 			break;
 		case Id_indexOf:
@@ -225,91 +274,145 @@ public class NativeArray extends IdScriptableObject implements Wrapper {
 			arity = 1;
 			s = "some";
 			break;
+		case Id_reduce:
+			arity = 1;
+			s = "reduce";
+			break;
+		case Id_reduceRight:
+			arity = 1;
+			s = "reduceRight";
+			break;
 		default:
 			throw new IllegalArgumentException(String.valueOf(id));
 		}
 		initPrototypeMethod(ARRAY_TAG, id, s, arity);
 	}
 
+	@Override
 	public Object execIdCall(IdFunctionObject f, Context cx, Scriptable scope,
 			Scriptable thisObj, Object[] args) {
 		if (!f.hasTag(ARRAY_TAG)) {
 			return super.execIdCall(f, cx, scope, thisObj, args);
 		}
 		int id = f.methodId();
-		switch (id) {
-		case Id_constructor: {
-			boolean inNewExpr = (thisObj == null);
-			if (!inNewExpr) {
-				// IdFunctionObject.construct will set up parent, proto
-				return f.construct(cx, scope, args);
+		again: for (;;) {
+			switch (id) {
+			case ConstructorId_join:
+			case ConstructorId_reverse:
+			case ConstructorId_sort:
+			case ConstructorId_push:
+			case ConstructorId_pop:
+			case ConstructorId_shift:
+			case ConstructorId_unshift:
+			case ConstructorId_splice:
+			case ConstructorId_concat:
+			case ConstructorId_slice:
+			case ConstructorId_indexOf:
+			case ConstructorId_lastIndexOf:
+			case ConstructorId_every:
+			case ConstructorId_filter:
+			case ConstructorId_forEach:
+			case ConstructorId_map:
+			case ConstructorId_some:
+			case ConstructorId_reduce:
+			case ConstructorId_reduceRight: {
+				if (args.length > 0) {
+					thisObj = ScriptRuntime.toObject(scope, args[0]);
+					Object[] newArgs = new Object[args.length - 1];
+					for (int i = 0; i < newArgs.length; i++)
+						newArgs[i] = args[i + 1];
+					args = newArgs;
+				}
+				id = -id;
+				continue again;
 			}
-			return jsConstructor(cx, scope, args);
+
+			case ConstructorId_isArray:
+				return args.length > 0 && (args[0] instanceof NativeArray);
+
+			case Id_constructor: {
+				boolean inNewExpr = (thisObj == null);
+				if (!inNewExpr) {
+					// IdFunctionObject.construct will set up parent, proto
+					return f.construct(cx, scope, args);
+				}
+				return jsConstructor(cx, scope, args);
+			}
+
+			case Id_toString:
+				return toStringHelper(cx, scope, thisObj,
+						cx.hasFeature(Context.FEATURE_TO_STRING_AS_SOURCE),
+						false);
+
+			case Id_toLocaleString:
+				return toStringHelper(cx, scope, thisObj, false, true);
+
+			case Id_toSource:
+				return toStringHelper(cx, scope, thisObj, true, false);
+
+			case Id_join:
+				return js_join(cx, thisObj, args);
+
+			case Id_reverse:
+				return js_reverse(cx, thisObj, args);
+
+			case Id_sort:
+				return js_sort(cx, scope, thisObj, args);
+
+			case Id_push:
+				return js_push(cx, thisObj, args);
+
+			case Id_pop:
+				return js_pop(cx, thisObj, args);
+
+			case Id_shift:
+				return js_shift(cx, thisObj, args);
+
+			case Id_unshift:
+				return js_unshift(cx, thisObj, args);
+
+			case Id_splice:
+				return js_splice(cx, scope, thisObj, args);
+
+			case Id_concat:
+				return js_concat(cx, scope, thisObj, args);
+
+			case Id_slice:
+				return js_slice(cx, thisObj, args);
+
+			case Id_indexOf:
+				return indexOfHelper(cx, thisObj, args, false);
+
+			case Id_lastIndexOf:
+				return indexOfHelper(cx, thisObj, args, true);
+
+			case Id_every:
+			case Id_filter:
+			case Id_forEach:
+			case Id_map:
+			case Id_some:
+				return iterativeMethod(cx, id, scope, thisObj, args);
+			case Id_reduce:
+			case Id_reduceRight:
+				return reduceMethod(cx, id, scope, thisObj, args);
+			}
+			throw new IllegalArgumentException(String.valueOf(id));
 		}
-
-		case Id_toString:
-			return toStringHelper(cx, scope, thisObj,
-					cx.hasFeature(Context.FEATURE_TO_STRING_AS_SOURCE), false);
-
-		case Id_toLocaleString:
-			return toStringHelper(cx, scope, thisObj, false, true);
-
-		case Id_toSource:
-			return toStringHelper(cx, scope, thisObj, true, false);
-
-		case Id_join:
-			return js_join(cx, thisObj, args);
-
-		case Id_reverse:
-			return js_reverse(cx, thisObj, args);
-
-		case Id_sort:
-			return js_sort(cx, scope, thisObj, args);
-
-		case Id_push:
-			return js_push(cx, thisObj, args);
-
-		case Id_pop:
-			return js_pop(cx, thisObj, args);
-
-		case Id_shift:
-			return js_shift(cx, thisObj, args);
-
-		case Id_unshift:
-			return js_unshift(cx, thisObj, args);
-
-		case Id_splice:
-			return js_splice(cx, scope, thisObj, args);
-
-		case Id_concat:
-			return js_concat(cx, scope, thisObj, args);
-
-		case Id_slice:
-			return js_slice(cx, thisObj, args);
-
-		case Id_indexOf:
-			return indexOfHelper(cx, thisObj, args, false);
-
-		case Id_lastIndexOf:
-			return indexOfHelper(cx, thisObj, args, true);
-
-		case Id_every:
-		case Id_filter:
-		case Id_forEach:
-		case Id_map:
-		case Id_some:
-			return iterativeMethod(cx, id, scope, thisObj, args);
-		}
-		throw new IllegalArgumentException(String.valueOf(id));
 	}
 
+	@Override
 	public Object get(int index, Scriptable start) {
+		if (!denseOnly && isGetterOrSetter(null, index, false))
+			return super.get(index, start);
 		if (dense != null && 0 <= index && index < dense.length)
 			return dense[index];
 		return super.get(index, start);
 	}
 
+	@Override
 	public boolean has(int index, Scriptable start) {
+		if (!denseOnly && isGetterOrSetter(null, index, false))
+			return super.has(index, start);
 		if (dense != null && 0 <= index && index < dense.length)
 			return dense[index] != NOT_FOUND;
 		return super.has(index, start);
@@ -332,6 +435,7 @@ public class NativeArray extends IdScriptableObject implements Wrapper {
 		return -1;
 	}
 
+	@Override
 	public void put(String id, Scriptable start, Object value) {
 		super.put(id, start, value);
 		if (start == this) {
@@ -339,18 +443,46 @@ public class NativeArray extends IdScriptableObject implements Wrapper {
 			long index = toArrayIndex(id);
 			if (index >= length) {
 				length = index + 1;
+				denseOnly = false;
 			}
 		}
 	}
 
+	private boolean ensureCapacity(int capacity) {
+		if (capacity > dense.length) {
+			if (capacity > MAX_PRE_GROW_SIZE) {
+				denseOnly = false;
+				return false;
+			}
+			capacity = Math.max(capacity, (int) (dense.length * GROW_FACTOR));
+			Object[] newDense = new Object[capacity];
+			System.arraycopy(dense, 0, newDense, 0, dense.length);
+			Arrays.fill(newDense, dense.length, newDense.length,
+					Scriptable.NOT_FOUND);
+			dense = newDense;
+		}
+		return true;
+	}
+
+	@Override
 	public void put(int index, Scriptable start, Object value) {
 		if (start == this && !isSealed() && dense != null && 0 <= index
-				&& index < dense.length) {
-			// If start == this && sealed, super will throw exception
-			dense[index] = value;
-		} else {
-			super.put(index, start, value);
+				&& (denseOnly || !isGetterOrSetter(null, index, true))) {
+			if (index < dense.length) {
+				dense[index] = value;
+				if (this.length <= index)
+					this.length = (long) index + 1;
+				return;
+			} else if (denseOnly && index < dense.length * GROW_FACTOR
+					&& ensureCapacity(index + 1)) {
+				dense[index] = value;
+				this.length = (long) index + 1;
+				return;
+			} else {
+				denseOnly = false;
+			}
 		}
+		super.put(index, start, value);
 		if (start == this) {
 			// only set the array length if given an array index (ECMA 15.4.0)
 			if (this.length <= index) {
@@ -358,17 +490,19 @@ public class NativeArray extends IdScriptableObject implements Wrapper {
 				this.length = (long) index + 1;
 			}
 		}
-
 	}
 
+	@Override
 	public void delete(int index) {
-		if (!isSealed() && dense != null && 0 <= index && index < dense.length) {
+		if (dense != null && 0 <= index && index < dense.length && !isSealed()
+				&& (denseOnly || !isGetterOrSetter(null, index, true))) {
 			dense[index] = NOT_FOUND;
 		} else {
 			super.delete(index);
 		}
 	}
 
+	@Override
 	public Object[] getIds() {
 		Object[] superIds = super.getIds();
 		if (dense == null) {
@@ -384,14 +518,12 @@ public class NativeArray extends IdScriptableObject implements Wrapper {
 		}
 		int superLength = superIds.length;
 		Object[] ids = new Object[N + superLength];
-		// Make a copy of dense to be immune to removing
-		// of array elems from other thread when calculating presentCount
-		System.arraycopy(dense, 0, ids, 0, N);
+
 		int presentCount = 0;
 		for (int i = 0; i != N; ++i) {
 			// Replace existing elements by their indexes
-			if (ids[i] != NOT_FOUND) {
-				ids[presentCount] = new Integer(i);
+			if (dense[i] != NOT_FOUND) {
+				ids[presentCount] = Integer.valueOf(i);
 				++presentCount;
 			}
 		}
@@ -405,13 +537,92 @@ public class NativeArray extends IdScriptableObject implements Wrapper {
 		return ids;
 	}
 
-	public Object getDefaultValue(Class hint) {
+	@Override
+	public Object[] getAllIds() {
+		Set<Object> allIds = new LinkedHashSet<Object>(Arrays.asList(this
+				.getIds()));
+		allIds.addAll(Arrays.asList(super.getAllIds()));
+		return allIds.toArray();
+	}
+
+	public Integer[] getIndexIds() {
+		Object[] ids = getIds();
+		java.util.List<Integer> indices = new java.util.ArrayList<Integer>(
+				ids.length);
+		for (Object id : ids) {
+			int int32Id = ScriptRuntime.toInt32(id);
+			if (int32Id >= 0
+					&& ScriptRuntime.toString(int32Id).equals(
+							ScriptRuntime.toString(id))) {
+				indices.add(int32Id);
+			}
+		}
+		return indices.toArray(new Integer[indices.size()]);
+	}
+
+	@Override
+	public Object getDefaultValue(Class<?> hint) {
 		if (hint == ScriptRuntime.NumberClass) {
 			Context cx = Context.getContext();
 			if (cx.getLanguageVersion() == Context.VERSION_1_2)
-				return new Long(length);
+				return Long.valueOf(length);
 		}
 		return super.getDefaultValue(hint);
+	}
+
+	private ScriptableObject defaultIndexPropertyDescriptor(Object value) {
+		Scriptable scope = getParentScope();
+		if (scope == null)
+			scope = this;
+		ScriptableObject desc = new NativeObject();
+		ScriptRuntime.setBuiltinProtoAndParent(desc, scope,
+				TopLevel.Builtins.Object);
+		desc.defineProperty("value", value, EMPTY);
+		desc.defineProperty("writable", true, EMPTY);
+		desc.defineProperty("enumerable", true, EMPTY);
+		desc.defineProperty("configurable", true, EMPTY);
+		return desc;
+	}
+
+	@Override
+	protected ScriptableObject getOwnPropertyDescriptor(Context cx, Object id) {
+		if (dense != null) {
+			int index = toIndex(id);
+			if (0 <= index && index < length) {
+				Object value = dense[index];
+				return defaultIndexPropertyDescriptor(value);
+			}
+		}
+		return super.getOwnPropertyDescriptor(cx, id);
+	}
+
+	@Override
+	public void defineOwnProperty(Context cx, Object id, ScriptableObject desc) {
+		if (dense != null) {
+			Object[] values = dense;
+			dense = null;
+			denseOnly = false;
+			for (int i = 0; i < values.length; i++) {
+				if (values[i] != NOT_FOUND) {
+					put(i, this, values[i]);
+				}
+			}
+		}
+		int index = toIndex(id);
+		if (index >= length) {
+			length = index + 1;
+		}
+		super.defineOwnProperty(cx, id, desc);
+	}
+
+	private int toIndex(Object id) {
+		if (id instanceof String) {
+			return (int) toArrayIndex((String) id);
+		} else if (id instanceof Number) {
+			return ((Number) id).intValue();
+		} else {
+			return -1;
+		}
 	}
 
 	/**
@@ -420,7 +631,7 @@ public class NativeArray extends IdScriptableObject implements Wrapper {
 	private static Object jsConstructor(Context cx, Scriptable scope,
 			Object[] args) {
 		if (args.length == 0)
-			return new NativeArray();
+			return new NativeArray(0);
 
 		// Only use 1 arg as first element for version 1.2; for
 		// any other version (including 1.3) follow ECMA and use it as
@@ -433,8 +644,11 @@ public class NativeArray extends IdScriptableObject implements Wrapper {
 				return new NativeArray(args);
 			} else {
 				long len = ScriptRuntime.toUint32(arg0);
-				if (len != ((Number) arg0).doubleValue())
-					throw Context.reportRuntimeError0("msg.arraylength.bad");
+				if (len != ((Number) arg0).doubleValue()) {
+					String msg = ScriptRuntime
+							.getMessage0("msg.arraylength.bad");
+					throw ScriptRuntime.constructError("RangeError", msg);
+				}
 				return new NativeArray(len);
 			}
 		}
@@ -449,6 +663,23 @@ public class NativeArray extends IdScriptableObject implements Wrapper {
 		return getLength();
 	}
 
+	/**
+	 * Change the value of the internal flag that determines whether all storage
+	 * is handed by a dense backing array rather than an associative store.
+	 * 
+	 * @param denseOnly
+	 *            new value for denseOnly flag
+	 * @throws IllegalArgumentException
+	 *             if an attempt is made to enable denseOnly after it was
+	 *             disabled; NativeArray code is not written to handle switching
+	 *             back to a dense representation
+	 */
+	void setDenseOnly(boolean denseOnly) {
+		if (denseOnly && !this.denseOnly)
+			throw new IllegalArgumentException();
+		this.denseOnly = denseOnly;
+	}
+
 	private void setLength(Object val) {
 		/*
 		 * XXX do we satisfy this? 15.4.5.1 [[Put]](P, V): 1. Call the
@@ -458,9 +689,26 @@ public class NativeArray extends IdScriptableObject implements Wrapper {
 
 		double d = ScriptRuntime.toNumber(val);
 		long longVal = ScriptRuntime.toUint32(d);
-		if (longVal != d)
-			throw Context.reportRuntimeError0("msg.arraylength.bad");
+		if (longVal != d) {
+			String msg = ScriptRuntime.getMessage0("msg.arraylength.bad");
+			throw ScriptRuntime.constructError("RangeError", msg);
+		}
 
+		if (denseOnly) {
+			if (longVal < length) {
+				// downcast okay because denseOnly
+				Arrays.fill(dense, (int) longVal, dense.length, NOT_FOUND);
+				length = longVal;
+				return;
+			} else if (longVal < MAX_PRE_GROW_SIZE
+					&& longVal < (length * GROW_FACTOR)
+					&& ensureCapacity((int) longVal)) {
+				length = longVal;
+				return;
+			} else {
+				denseOnly = false;
+			}
+		}
 		if (longVal < length) {
 			// remove all properties between longVal and length
 			if (length - longVal > 0x1000) {
@@ -537,6 +785,15 @@ public class NativeArray extends IdScriptableObject implements Wrapper {
 		}
 	}
 
+	// same as getElem, but without converting NOT_FOUND to undefined
+	private static Object getRawElem(Scriptable target, long index) {
+		if (index > Integer.MAX_VALUE) {
+			return ScriptableObject.getProperty(target, Long.toString(index));
+		} else {
+			return ScriptableObject.getProperty(target, (int) index);
+		}
+	}
+
 	private static void setElem(Context cx, Scriptable target, long index,
 			Object value) {
 		if (index > Integer.MAX_VALUE) {
@@ -551,26 +808,22 @@ public class NativeArray extends IdScriptableObject implements Wrapper {
 			Scriptable thisObj, boolean toSource, boolean toLocale) {
 		/*
 		 * It's probably redundant to handle long lengths in this function;
-		 * StringBuffers are limited to 2^31 in java.
+		 * StringBuilders are limited to 2^31 in java.
 		 */
 
 		long length = getLengthProperty(cx, thisObj);
 
-		StringBuffer result = new StringBuffer(256);
+		StringBuilder result = new StringBuilder(256);
 
 		// whether to return '4,unquoted,5' or '[4, "quoted", 5]'
 		String separator;
 
-		// if (toSource) {
-		// result.append('[');
-		// separator = ", ";
-		// } else {
-		// separator = ",";
-		// }
-
-		// We want always this to be default to this, just as native java array
-		result.append('[');
-		separator = ",";
+		if (toSource) {
+			result.append('[');
+			separator = ", ";
+		} else {
+			separator = ",";
+		}
 
 		boolean haslast = false;
 		long i = 0;
@@ -626,31 +879,20 @@ public class NativeArray extends IdScriptableObject implements Wrapper {
 						result.append(ScriptRuntime.toString(elem));
 					}
 				}
-				Object[] ids = thisObj.getIds();
-				for (int j = 0; j < ids.length; j++) {
-					if (ids[j] instanceof String) {
-						if (j > 0)
-							result.append(separator);
-						result.append(ids[j]);
-						result.append("=");
-						result.append(ScriptRuntime.toString(thisObj.get(
-								(String) ids[j], thisObj)));
-					}
-				}
 			}
 		} finally {
 			if (toplevel) {
 				cx.iterating = null;
 			}
 		}
-		// We want always this to be default to this, just as native java array
-		// if (toSource) {
-		// for [,,].length behavior; we want toString to be symmetric.
-		if (!haslast && i > 0)
-			result.append(", ]");
-		else
-			result.append(']');
-		// }
+
+		if (toSource) {
+			// for [,,].length behavior; we want toString to be symmetric.
+			if (!haslast && i > 0)
+				result.append(", ]");
+			else
+				result.append(']');
+		}
 		return result.toString();
 	}
 
@@ -658,8 +900,6 @@ public class NativeArray extends IdScriptableObject implements Wrapper {
 	 * See ECMA 15.4.4.3
 	 */
 	private static String js_join(Context cx, Scriptable thisObj, Object[] args) {
-		String separator;
-
 		long llength = getLengthProperty(cx, thisObj);
 		int length = (int) llength;
 		if (llength != length) {
@@ -667,10 +907,26 @@ public class NativeArray extends IdScriptableObject implements Wrapper {
 					String.valueOf(llength));
 		}
 		// if no args, use "," as separator
-		if (args.length < 1 || args[0] == Undefined.instance) {
-			separator = ",";
-		} else {
-			separator = ScriptRuntime.toString(args[0]);
+		String separator = (args.length < 1 || args[0] == Undefined.instance) ? ","
+				: ScriptRuntime.toString(args[0]);
+		if (thisObj instanceof NativeArray) {
+			NativeArray na = (NativeArray) thisObj;
+			if (na.denseOnly) {
+				StringBuilder sb = new StringBuilder();
+				for (int i = 0; i < length; i++) {
+					if (i != 0) {
+						sb.append(separator);
+					}
+					if (i < na.dense.length) {
+						Object temp = na.dense[i];
+						if (temp != null && temp != Undefined.instance
+								&& temp != Scriptable.NOT_FOUND) {
+							sb.append(ScriptRuntime.toString(temp));
+						}
+					}
+				}
+				return sb.toString();
+			}
 		}
 		if (length == 0) {
 			return "";
@@ -686,7 +942,7 @@ public class NativeArray extends IdScriptableObject implements Wrapper {
 			}
 		}
 		total_size += (length - 1) * separator.length();
-		StringBuffer sb = new StringBuffer(total_size);
+		StringBuilder sb = new StringBuilder(total_size);
 		for (int i = 0; i != length; i++) {
 			if (i != 0) {
 				sb.append(separator);
@@ -705,6 +961,17 @@ public class NativeArray extends IdScriptableObject implements Wrapper {
 	 */
 	private static Scriptable js_reverse(Context cx, Scriptable thisObj,
 			Object[] args) {
+		if (thisObj instanceof NativeArray) {
+			NativeArray na = (NativeArray) thisObj;
+			if (na.denseOnly) {
+				for (int i = 0, j = ((int) na.length) - 1; i < j; i++, j--) {
+					Object temp = na.dense[i];
+					na.dense[i] = na.dense[j];
+					na.dense[j] = temp;
+				}
+				return thisObj;
+			}
+		}
 		long len = getLengthProperty(cx, thisObj);
 
 		long half = len / 2;
@@ -721,196 +988,77 @@ public class NativeArray extends IdScriptableObject implements Wrapper {
 	/**
 	 * See ECMA 15.4.4.5
 	 */
-	private static Scriptable js_sort(Context cx, Scriptable scope,
-			Scriptable thisObj, Object[] args) {
-		long length = getLengthProperty(cx, thisObj);
-
-		if (length <= 1) {
-			return thisObj;
-		}
-
-		Object compare;
-		Object[] cmpBuf;
-
+	private static Scriptable js_sort(final Context cx, final Scriptable scope,
+			final Scriptable thisObj, final Object[] args) {
+		final Comparator<Object> comparator;
 		if (args.length > 0 && Undefined.instance != args[0]) {
-			// sort with given compare function
-			compare = args[0];
-			cmpBuf = new Object[2]; // Buffer for cmp arguments
+			final Callable jsCompareFunction = ScriptRuntime
+					.getValueFunctionAndThis(args[0], cx);
+			final Scriptable funThis = ScriptRuntime.lastStoredScriptable(cx);
+			final Object[] cmpBuf = new Object[2]; // Buffer for cmp arguments
+			comparator = new Comparator<Object>() {
+				public int compare(final Object x, final Object y) {
+					// sort undefined to end
+					if (x == y) {
+						return 0;
+					} else if (y == Undefined.instance
+							|| y == Scriptable.NOT_FOUND) {
+						return -1;
+					} else if (x == Undefined.instance
+							|| x == Scriptable.NOT_FOUND) {
+						return 1;
+					}
+
+					cmpBuf[0] = x;
+					cmpBuf[1] = y;
+					Object ret = jsCompareFunction.call(cx, scope, funThis,
+							cmpBuf);
+					final double d = ScriptRuntime.toNumber(ret);
+					if (d < 0) {
+						return -1;
+					} else if (d > 0) {
+						return +1;
+					}
+					return 0; // ??? double and 0???
+				}
+			};
 		} else {
-			// sort with default compare
-			compare = null;
-			cmpBuf = null;
+			comparator = new Comparator<Object>() {
+				public int compare(final Object x, final Object y) {
+					// sort undefined to end
+					if (x == y)
+						return 0;
+					else if (y == Undefined.instance
+							|| y == Scriptable.NOT_FOUND) {
+						return -1;
+					} else if (x == Undefined.instance
+							|| x == Scriptable.NOT_FOUND) {
+						return 1;
+					}
+
+					final String a = ScriptRuntime.toString(x);
+					final String b = ScriptRuntime.toString(y);
+					return a.compareTo(b);
+				}
+			};
 		}
 
-		// Should we use the extended sort function, or the faster one?
-		if (length >= Integer.MAX_VALUE) {
-			heapsort_extended(cx, scope, thisObj, length, compare, cmpBuf);
-		} else {
-			int ilength = (int) length;
-			// copy the JS array into a working array, so it can be
-			// sorted cheaply.
-			Object[] working = new Object[ilength];
-			for (int i = 0; i != ilength; ++i) {
-				working[i] = getElem(cx, thisObj, i);
-			}
-
-			heapsort(cx, scope, working, ilength, compare, cmpBuf);
-
-			// copy the working array back into thisObj
-			for (int i = 0; i != ilength; ++i) {
-				setElem(cx, thisObj, i, working[i]);
-			}
+		final int length = (int) getLengthProperty(cx, thisObj);
+		// copy the JS array into a working array, so it can be
+		// sorted cheaply.
+		final Object[] working = new Object[length];
+		for (int i = 0; i != length; ++i) {
+			working[i] = getElem(cx, thisObj, i);
 		}
+
+		Arrays.sort(working, comparator);
+
+		// copy the working array back into thisObj
+		for (int i = 0; i < length; ++i) {
+			setElem(cx, thisObj, i, working[i]);
+		}
+
 		return thisObj;
-	}
-
-	// Return true only if x > y
-	private static boolean isBigger(Context cx, Scriptable scope, Object x,
-			Object y, Object cmp, Object[] cmpBuf) {
-		if (cmp == null) {
-			if (cmpBuf != null)
-				Kit.codeBug();
-		} else {
-			if (cmpBuf == null || cmpBuf.length != 2)
-				Kit.codeBug();
-		}
-
-		Object undef = Undefined.instance;
-
-		// sort undefined to end
-		if (undef == y) {
-			return false; // x can not be bigger then undef
-		} else if (undef == x) {
-			return true; // y != undef here, so x > y
-		}
-
-		if (cmp == null) {
-			// if no cmp function supplied, sort lexicographically
-			String a = ScriptRuntime.toString(x);
-			String b = ScriptRuntime.toString(y);
-			return a.compareTo(b) > 0;
-		} else {
-			// assemble args and call supplied JS cmp function
-			cmpBuf[0] = x;
-			cmpBuf[1] = y;
-			Callable fun = ScriptRuntime.getValueFunctionAndThis(cmp, cx);
-			Scriptable funThis = ScriptRuntime.lastStoredScriptable(cx);
-
-			Object ret = fun.call(cx, scope, funThis, cmpBuf);
-			double d = ScriptRuntime.toNumber(ret);
-
-			// XXX what to do when cmp function returns NaN? ECMA states
-			// that it's then not a 'consistent compararison function'... but
-			// then what do we do? Back out and start over with the generic
-			// cmp function when we see a NaN? Throw an error?
-
-			// for now, just ignore it:
-
-			return d > 0;
-		}
-	}
-
-	/**
-	 * Heapsort implementation. See "Introduction to Algorithms" by Cormen,
-	 * Leiserson, Rivest for details. Adjusted for zero based indexes.
-	 */
-	private static void heapsort(Context cx, Scriptable scope, Object[] array,
-			int length, Object cmp, Object[] cmpBuf) {
-		if (length <= 1)
-			Kit.codeBug();
-
-		// Build heap
-		for (int i = length / 2; i != 0;) {
-			--i;
-			Object pivot = array[i];
-			heapify(cx, scope, pivot, array, i, length, cmp, cmpBuf);
-		}
-
-		// Sort heap
-		for (int i = length; i != 1;) {
-			--i;
-			Object pivot = array[i];
-			array[i] = array[0];
-			heapify(cx, scope, pivot, array, 0, i, cmp, cmpBuf);
-		}
-	}
-
-	/**
-	 * pivot and child heaps of i should be made into heap starting at i,
-	 * original array[i] is never used to have less array access during sorting.
-	 */
-	private static void heapify(Context cx, Scriptable scope, Object pivot,
-			Object[] array, int i, int end, Object cmp, Object[] cmpBuf) {
-		for (;;) {
-			int child = i * 2 + 1;
-			if (child >= end) {
-				break;
-			}
-			Object childVal = array[child];
-			if (child + 1 < end) {
-				Object nextVal = array[child + 1];
-				if (isBigger(cx, scope, nextVal, childVal, cmp, cmpBuf)) {
-					++child;
-					childVal = nextVal;
-				}
-			}
-			if (!isBigger(cx, scope, childVal, pivot, cmp, cmpBuf)) {
-				break;
-			}
-			array[i] = childVal;
-			i = child;
-		}
-		array[i] = pivot;
-	}
-
-	/**
-	 * Version of heapsort that call getElem/setElem on target to query/assign
-	 * array elements instead of Java array access
-	 */
-	private static void heapsort_extended(Context cx, Scriptable scope,
-			Scriptable target, long length, Object cmp, Object[] cmpBuf) {
-		if (length <= 1)
-			Kit.codeBug();
-
-		// Build heap
-		for (long i = length / 2; i != 0;) {
-			--i;
-			Object pivot = getElem(cx, target, i);
-			heapify_extended(cx, scope, pivot, target, i, length, cmp, cmpBuf);
-		}
-
-		// Sort heap
-		for (long i = length; i != 1;) {
-			--i;
-			Object pivot = getElem(cx, target, i);
-			setElem(cx, target, i, getElem(cx, target, 0));
-			heapify_extended(cx, scope, pivot, target, 0, i, cmp, cmpBuf);
-		}
-	}
-
-	private static void heapify_extended(Context cx, Scriptable scope,
-			Object pivot, Scriptable target, long i, long end, Object cmp,
-			Object[] cmpBuf) {
-		for (;;) {
-			long child = i * 2 + 1;
-			if (child >= end) {
-				break;
-			}
-			Object childVal = getElem(cx, target, child);
-			if (child + 1 < end) {
-				Object nextVal = getElem(cx, target, child + 1);
-				if (isBigger(cx, scope, nextVal, childVal, cmp, cmpBuf)) {
-					++child;
-					childVal = nextVal;
-				}
-			}
-			if (!isBigger(cx, scope, childVal, pivot, cmp, cmpBuf)) {
-				break;
-			}
-			setElem(cx, target, i, childVal);
-			i = child;
-		}
-		setElem(cx, target, i, pivot);
 	}
 
 	/**
@@ -918,6 +1066,16 @@ public class NativeArray extends IdScriptableObject implements Wrapper {
 	 */
 
 	private static Object js_push(Context cx, Scriptable thisObj, Object[] args) {
+		if (thisObj instanceof NativeArray) {
+			NativeArray na = (NativeArray) thisObj;
+			if (na.denseOnly
+					&& na.ensureCapacity((int) na.length + args.length)) {
+				for (int i = 0; i < args.length; i++) {
+					na.dense[(int) na.length++] = args[i];
+				}
+				return ScriptRuntime.wrapNumber(na.length);
+			}
+		}
 		long length = getLengthProperty(cx, thisObj);
 		for (int i = 0; i < args.length; i++) {
 			setElem(cx, thisObj, length + i, args[i]);
@@ -941,6 +1099,15 @@ public class NativeArray extends IdScriptableObject implements Wrapper {
 
 	private static Object js_pop(Context cx, Scriptable thisObj, Object[] args) {
 		Object result;
+		if (thisObj instanceof NativeArray) {
+			NativeArray na = (NativeArray) thisObj;
+			if (na.denseOnly && na.length > 0) {
+				na.length--;
+				result = na.dense[(int) na.length];
+				na.dense[(int) na.length] = NOT_FOUND;
+				return result;
+			}
+		}
 		long length = getLengthProperty(cx, thisObj);
 		if (length > 0) {
 			length--;
@@ -961,6 +1128,16 @@ public class NativeArray extends IdScriptableObject implements Wrapper {
 	}
 
 	private static Object js_shift(Context cx, Scriptable thisObj, Object[] args) {
+		if (thisObj instanceof NativeArray) {
+			NativeArray na = (NativeArray) thisObj;
+			if (na.denseOnly && na.length > 0) {
+				na.length--;
+				Object result = na.dense[0];
+				System.arraycopy(na.dense, 1, na.dense, 0, (int) na.length);
+				na.dense[(int) na.length] = NOT_FOUND;
+				return result;
+			}
+		}
 		Object result;
 		long length = getLengthProperty(cx, thisObj);
 		if (length > 0) {
@@ -991,6 +1168,19 @@ public class NativeArray extends IdScriptableObject implements Wrapper {
 
 	private static Object js_unshift(Context cx, Scriptable thisObj,
 			Object[] args) {
+		if (thisObj instanceof NativeArray) {
+			NativeArray na = (NativeArray) thisObj;
+			if (na.denseOnly
+					&& na.ensureCapacity((int) na.length + args.length)) {
+				System.arraycopy(na.dense, 0, na.dense, args.length,
+						(int) na.length);
+				for (int i = 0; i < args.length; i++) {
+					na.dense[i] = args[i];
+				}
+				na.length += args.length;
+				return ScriptRuntime.wrapNumber(na.length);
+			}
+		}
 		long length = getLengthProperty(cx, thisObj);
 		int argc = args.length;
 
@@ -1017,12 +1207,18 @@ public class NativeArray extends IdScriptableObject implements Wrapper {
 
 	private static Object js_splice(Context cx, Scriptable scope,
 			Scriptable thisObj, Object[] args) {
+		NativeArray na = null;
+		boolean denseMode = false;
+		if (thisObj instanceof NativeArray) {
+			na = (NativeArray) thisObj;
+			denseMode = na.denseOnly;
+		}
+
 		/* create an empty Array to return. */
 		scope = getTopLevelScope(scope);
-		Object result = ScriptRuntime.newObject(cx, scope, "Array", null);
 		int argc = args.length;
 		if (argc == 0)
-			return result;
+			return cx.newArray(scope, 0);
 		long length = getLengthProperty(cx, thisObj);
 
 		/* Convert the first argument into a starting index. */
@@ -1048,35 +1244,64 @@ public class NativeArray extends IdScriptableObject implements Wrapper {
 		long end = begin + count;
 
 		/* If there are elements to remove, put them into the return value. */
+		Object result;
 		if (count != 0) {
 			if (count == 1 && (cx.getLanguageVersion() == Context.VERSION_1_2)) {
 				/*
 				 * JS lacks "list context", whereby in Perl one turns the single
 				 * scalar that's spliced out into an array just by assigning it
-				 * to
+				 * to @single instead of $single, or by using it as Perl push's
+				 * first argument, for instance.
 				 * 
-				 * @single instead of $single, or by using it as Perl push's
-				 * first argument, for instance. JS1.2 emulated Perl too closely
-				 * and returned a non-Array for the single-splice-out case,
-				 * requiring callers to test and wrap in [] if necessary. So
-				 * JS1.3, default, and other versions all return an array of
-				 * length 1 for uniformity.
+				 * JS1.2 emulated Perl too closely and returned a non-Array for
+				 * the single-splice-out case, requiring callers to test and
+				 * wrap in [] if necessary. So JS1.3, default, and other
+				 * versions all return an array of length 1 for uniformity.
 				 */
 				result = getElem(cx, thisObj, begin);
 			} else {
-				for (long last = begin; last != end; last++) {
-					Scriptable resultArray = (Scriptable) result;
-					Object temp = getElem(cx, thisObj, last);
-					setElem(cx, resultArray, last - begin, temp);
+				if (denseMode) {
+					int intLen = (int) (end - begin);
+					Object[] copy = new Object[intLen];
+					System.arraycopy(na.dense, (int) begin, copy, 0, intLen);
+					result = cx.newArray(scope, copy);
+				} else {
+					Scriptable resultArray = cx.newArray(scope, 0);
+					for (long last = begin; last != end; last++) {
+						Object temp = getElem(cx, thisObj, last);
+						setElem(cx, resultArray, last - begin, temp);
+					}
+					result = resultArray;
 				}
 			}
-		} else if (count == 0 && cx.getLanguageVersion() == Context.VERSION_1_2) {
-			/* Emulate C JS1.2; if no elements are removed, return undefined. */
-			result = Undefined.instance;
+		} else { // (count == 0)
+			if (cx.getLanguageVersion() == Context.VERSION_1_2) {
+				/*
+				 * Emulate C JS1.2; if no elements are removed, return
+				 * undefined.
+				 */
+				result = Undefined.instance;
+			} else {
+				result = cx.newArray(scope, 0);
+			}
 		}
 
 		/* Find the direction (up or down) to copy and make way for argv. */
 		long delta = argc - count;
+		if (denseMode && length + delta < Integer.MAX_VALUE
+				&& na.ensureCapacity((int) (length + delta))) {
+			System.arraycopy(na.dense, (int) end, na.dense,
+					(int) (begin + argc), (int) (length - end));
+			if (argc > 0) {
+				System.arraycopy(args, 2, na.dense, (int) begin, argc);
+			}
+			if (delta < 0) {
+				Arrays.fill(na.dense, (int) (length + delta), (int) length,
+						NOT_FOUND);
+			}
+			na.length = length + delta;
+			return result;
+		}
 
 		if (delta > 0) {
 			for (long last = length - 1; last >= end; last--) {
@@ -1110,6 +1335,44 @@ public class NativeArray extends IdScriptableObject implements Wrapper {
 		scope = getTopLevelScope(scope);
 		Function ctor = ScriptRuntime.getExistingCtor(cx, scope, "Array");
 		Scriptable result = ctor.construct(cx, scope, ScriptRuntime.emptyArgs);
+		if (thisObj instanceof NativeArray && result instanceof NativeArray) {
+			NativeArray denseThis = (NativeArray) thisObj;
+			NativeArray denseResult = (NativeArray) result;
+			if (denseThis.denseOnly && denseResult.denseOnly) {
+				// First calculate length of resulting array
+				boolean canUseDense = true;
+				int length = (int) denseThis.length;
+				for (int i = 0; i < args.length && canUseDense; i++) {
+					if (args[i] instanceof NativeArray) {
+						// only try to use dense approach for Array-like
+						// objects that are actually NativeArrays
+						final NativeArray arg = (NativeArray) args[i];
+						canUseDense = arg.denseOnly;
+						length += arg.length;
+					} else {
+						length++;
+					}
+				}
+				if (canUseDense && denseResult.ensureCapacity(length)) {
+					System.arraycopy(denseThis.dense, 0, denseResult.dense, 0,
+							(int) denseThis.length);
+					int cursor = (int) denseThis.length;
+					for (int i = 0; i < args.length && canUseDense; i++) {
+						if (args[i] instanceof NativeArray) {
+							NativeArray arg = (NativeArray) args[i];
+							System.arraycopy(arg.dense, 0, denseResult.dense,
+									cursor, (int) arg.length);
+							cursor += (int) arg.length;
+						} else {
+							denseResult.dense[cursor++] = args[i];
+						}
+					}
+					denseResult.length = length;
+					return result;
+				}
+			}
+		}
+
 		long length;
 		long slot = 0;
 
@@ -1152,7 +1415,7 @@ public class NativeArray extends IdScriptableObject implements Wrapper {
 
 	private Scriptable js_slice(Context cx, Scriptable thisObj, Object[] args) {
 		Scriptable scope = getTopLevelScope(this);
-		Scriptable result = ScriptRuntime.newObject(cx, scope, "Array", null);
+		Scriptable result = cx.newArray(scope, 0);
 		long length = getLengthProperty(cx, thisObj);
 
 		long begin, end;
@@ -1199,23 +1462,94 @@ public class NativeArray extends IdScriptableObject implements Wrapper {
 			boolean isLast) {
 		Object compareTo = args.length > 0 ? args[0] : Undefined.instance;
 		long length = getLengthProperty(cx, thisObj);
-		long start = args.length > 1 ? ScriptRuntime.toInt32(ScriptRuntime
-				.toNumber(args[1])) : (isLast ? length : 0);
-		if (start < 0) {
-			start += length;
-			if (start < 0)
+		long start;
+		if (isLast) {
+			// lastIndexOf
+			/*
+			 * From
+			 * http://developer.mozilla.org/en/docs/Core_JavaScript_1.5_Reference
+			 * :Objects:Array:lastIndexOf The index at which to start searching
+			 * backwards. Defaults to the array's length, i.e. the whole array
+			 * will be searched. If the index is greater than or equal to the
+			 * length of the array, the whole array will be searched. If
+			 * negative, it is taken as the offset from the end of the array.
+			 * Note that even when the index is negative, the array is still
+			 * searched from back to front. If the calculated index is less than
+			 * 0, -1 is returned, i.e. the array will not be searched.
+			 */
+			if (args.length < 2) {
+				// default
+				start = length - 1;
+			} else {
+				start = ScriptRuntime.toInt32(ScriptRuntime.toNumber(args[1]));
+				if (start >= length)
+					start = length - 1;
+				else if (start < 0)
+					start += length;
+				// Note that start may be negative, but that's okay
+				// as the result of -1 will fall out from the code below
+			}
+		} else {
+			// indexOf
+			/*
+			 * From
+			 * http://developer.mozilla.org/en/docs/Core_JavaScript_1.5_Reference
+			 * :Objects:Array:indexOf The index at which to begin the search.
+			 * Defaults to 0, i.e. the whole array will be searched. If the
+			 * index is greater than or equal to the length of the array, -1 is
+			 * returned, i.e. the array will not be searched. If negative, it is
+			 * taken as the offset from the end of the array. Note that even
+			 * when the index is negative, the array is still searched from
+			 * front to back. If the calculated index is less than 0, the whole
+			 * array will be searched.
+			 */
+			if (args.length < 2) {
+				// default
 				start = 0;
+			} else {
+				start = ScriptRuntime.toInt32(ScriptRuntime.toNumber(args[1]));
+				if (start < 0) {
+					start += length;
+					if (start < 0)
+						start = 0;
+				}
+				// Note that start may be > length-1, but that's okay
+				// as the result of -1 will fall out from the code below
+			}
+		}
+		if (thisObj instanceof NativeArray) {
+			NativeArray na = (NativeArray) thisObj;
+			if (na.denseOnly) {
+				if (isLast) {
+					for (int i = (int) start; i >= 0; i--) {
+						if (na.dense[i] != Scriptable.NOT_FOUND
+								&& ScriptRuntime.shallowEq(na.dense[i],
+										compareTo)) {
+							return Long.valueOf(i);
+						}
+					}
+				} else {
+					for (int i = (int) start; i < length; i++) {
+						if (na.dense[i] != Scriptable.NOT_FOUND
+								&& ScriptRuntime.shallowEq(na.dense[i],
+										compareTo)) {
+							return Long.valueOf(i);
+						}
+					}
+				}
+				return NEGATIVE_ONE;
+			}
 		}
 		if (isLast) {
 			for (long i = start; i >= 0; i--) {
 				if (ScriptRuntime.shallowEq(getElem(cx, thisObj, i), compareTo)) {
-					return new Long(i);
+					return Long.valueOf(i);
 				}
 			}
 		} else {
 			for (long i = start; i < length; i++) {
 				if (ScriptRuntime.shallowEq(getElem(cx, thisObj, i), compareTo)) {
-					return new Long(i);
+					return Long.valueOf(i);
 				}
 			}
 		}
@@ -1229,27 +1563,28 @@ public class NativeArray extends IdScriptableObject implements Wrapper {
 			Scriptable thisObj, Object[] args) {
 		Object callbackArg = args.length > 0 ? args[0] : Undefined.instance;
 		if (callbackArg == null || !(callbackArg instanceof Function)) {
-			throw ScriptRuntime.notFunctionError(ScriptRuntime
-					.toString(callbackArg));
+			throw ScriptRuntime.notFunctionError(callbackArg);
 		}
 		Function f = (Function) callbackArg;
 		Scriptable parent = ScriptableObject.getTopLevelScope(f);
-		Scriptable thisArg = args.length > 1 && args[1] instanceof Scriptable ? (Scriptable) args[1]
-				: parent;
-		long length = getLengthProperty(cx, thisObj);
-		Scriptable array = null;
-		if (id == Id_filter) {
-			array = ScriptRuntime.newObject(cx, scope, "Array", null);
-		} else if (id == Id_map) {
-			// allocate dense array for efficiency
-			Object[] ctorArgs = { new Long(length) };
-			array = ScriptRuntime.newObject(cx, scope, "Array", ctorArgs);
+		Scriptable thisArg;
+		if (args.length < 2 || args[1] == null || args[1] == Undefined.instance) {
+			thisArg = parent;
+		} else {
+			thisArg = ScriptRuntime.toObject(cx, scope, args[1]);
 		}
-		Object[] innerArgs = new Object[3];
+		long length = getLengthProperty(cx, thisObj);
+		int resultLength = id == Id_map ? (int) length : 0;
+		Scriptable array = cx.newArray(scope, resultLength);
 		long j = 0;
 		for (long i = 0; i < length; i++) {
-			innerArgs[0] = getElem(cx, thisObj, i);
-			innerArgs[1] = new Long(i);
+			Object[] innerArgs = new Object[3];
+			Object elem = getRawElem(thisObj, i);
+			if (elem == Scriptable.NOT_FOUND) {
+				continue;
+			}
+			innerArgs[0] = elem;
+			innerArgs[1] = Long.valueOf(i);
 			innerArgs[2] = thisObj;
 			Object result = f.call(cx, parent, thisArg, innerArgs);
 			switch (id) {
@@ -1264,7 +1599,7 @@ public class NativeArray extends IdScriptableObject implements Wrapper {
 			case Id_forEach:
 				break;
 			case Id_map:
-				setElem(cx, array, j++, result);
+				setElem(cx, array, i, result);
 				break;
 			case Id_some:
 				if (ScriptRuntime.toBoolean(result))
@@ -1286,8 +1621,262 @@ public class NativeArray extends IdScriptableObject implements Wrapper {
 		}
 	}
 
+	/**
+	 * Implements the methods "reduce" and "reduceRight".
+	 */
+	private Object reduceMethod(Context cx, int id, Scriptable scope,
+			Scriptable thisObj, Object[] args) {
+		Object callbackArg = args.length > 0 ? args[0] : Undefined.instance;
+		if (callbackArg == null || !(callbackArg instanceof Function)) {
+			throw ScriptRuntime.notFunctionError(callbackArg);
+		}
+		Function f = (Function) callbackArg;
+		Scriptable parent = ScriptableObject.getTopLevelScope(f);
+		long length = getLengthProperty(cx, thisObj);
+		// offset hack to serve both reduce and reduceRight with the same loop
+		long offset = id == Id_reduceRight ? length - 1 : 0;
+		Object value = args.length > 1 ? args[1] : Scriptable.NOT_FOUND;
+		for (long i = 0; i < length; i++) {
+			Object elem = getRawElem(thisObj, Math.abs(i - offset));
+			if (elem == Scriptable.NOT_FOUND) {
+				continue;
+			}
+			if (value == Scriptable.NOT_FOUND) {
+				// no initial value passed, use first element found as inital
+				// value
+				value = elem;
+			} else {
+				Object[] innerArgs = new Object[4];
+				innerArgs[0] = value;
+				innerArgs[1] = elem;
+				innerArgs[2] = Long.valueOf(i);
+				innerArgs[3] = thisObj;
+				value = f.call(cx, parent, parent, innerArgs);
+			}
+		}
+		if (value == Scriptable.NOT_FOUND) {
+			// reproduce spidermonkey error message
+			throw ScriptRuntime.typeError0("msg.empty.array.reduce");
+		}
+		return value;
+	}
+
+	// methods to implement java.util.List
+
+	public boolean contains(Object o) {
+		return indexOf(o) > -1;
+	}
+
+	public Object[] toArray() {
+		return toArray(ScriptRuntime.emptyArgs);
+	}
+
+	public Object[] toArray(Object[] a) {
+		long longLen = length;
+		if (longLen > Integer.MAX_VALUE) {
+			throw new IllegalStateException();
+		}
+		int len = (int) longLen;
+		Object[] array = a.length >= len ? a
+				: (Object[]) java.lang.reflect.Array.newInstance(a.getClass()
+						.getComponentType(), len);
+		for (int i = 0; i < len; i++) {
+			array[i] = get(i);
+		}
+		return array;
+	}
+
+	public boolean containsAll(Collection c) {
+		for (Object aC : c)
+			if (!contains(aC))
+				return false;
+		return true;
+	}
+
+	public int size() {
+		long longLen = length;
+		if (longLen > Integer.MAX_VALUE) {
+			throw new IllegalStateException();
+		}
+		return (int) longLen;
+	}
+
+	public Object get(long index) {
+		if (index < 0 || index >= length) {
+			throw new IndexOutOfBoundsException();
+		}
+		Object value = getRawElem(this, index);
+		if (value == Scriptable.NOT_FOUND || value == Undefined.instance) {
+			return null;
+		} else if (value instanceof Wrapper) {
+			return ((Wrapper) value).unwrap();
+		} else {
+			return value;
+		}
+	}
+
+	public Object get(int index) {
+		return get((long) index);
+	}
+
+	public int indexOf(Object o) {
+		long longLen = length;
+		if (longLen > Integer.MAX_VALUE) {
+			throw new IllegalStateException();
+		}
+		int len = (int) longLen;
+		if (o == null) {
+			for (int i = 0; i < len; i++) {
+				if (get(i) == null) {
+					return i;
+				}
+			}
+		} else {
+			for (int i = 0; i < len; i++) {
+				if (o.equals(get(i))) {
+					return i;
+				}
+			}
+		}
+		return -1;
+	}
+
+	public int lastIndexOf(Object o) {
+		long longLen = length;
+		if (longLen > Integer.MAX_VALUE) {
+			throw new IllegalStateException();
+		}
+		int len = (int) longLen;
+		if (o == null) {
+			for (int i = len - 1; i >= 0; i--) {
+				if (get(i) == null) {
+					return i;
+				}
+			}
+		} else {
+			for (int i = len - 1; i >= 0; i--) {
+				if (o.equals(get(i))) {
+					return i;
+				}
+			}
+		}
+		return -1;
+	}
+
+	public Iterator iterator() {
+		return listIterator(0);
+	}
+
+	public ListIterator listIterator() {
+		return listIterator(0);
+	}
+
+	public ListIterator listIterator(final int start) {
+		long longLen = length;
+		if (longLen > Integer.MAX_VALUE) {
+			throw new IllegalStateException();
+		}
+		final int len = (int) longLen;
+
+		if (start < 0 || start > len) {
+			throw new IndexOutOfBoundsException("Index: " + start);
+		}
+
+		return new ListIterator() {
+
+			int cursor = start;
+
+			public boolean hasNext() {
+				return cursor < len;
+			}
+
+			public Object next() {
+				if (cursor == len) {
+					throw new NoSuchElementException();
+				}
+				return get(cursor++);
+			}
+
+			public boolean hasPrevious() {
+				return cursor > 0;
+			}
+
+			public Object previous() {
+				if (cursor == 0) {
+					throw new NoSuchElementException();
+				}
+				return get(--cursor);
+			}
+
+			public int nextIndex() {
+				return cursor;
+			}
+
+			public int previousIndex() {
+				return cursor - 1;
+			}
+
+			public void remove() {
+				throw new UnsupportedOperationException();
+			}
+
+			public void add(Object o) {
+				throw new UnsupportedOperationException();
+			}
+
+			public void set(Object o) {
+				throw new UnsupportedOperationException();
+			}
+		};
+	}
+
+	public boolean add(Object o) {
+		throw new UnsupportedOperationException();
+	}
+
+	public boolean remove(Object o) {
+		throw new UnsupportedOperationException();
+	}
+
+	public boolean addAll(Collection c) {
+		throw new UnsupportedOperationException();
+	}
+
+	public boolean removeAll(Collection c) {
+		throw new UnsupportedOperationException();
+	}
+
+	public boolean retainAll(Collection c) {
+		throw new UnsupportedOperationException();
+	}
+
+	public void clear() {
+		throw new UnsupportedOperationException();
+	}
+
+	public void add(int index, Object element) {
+		throw new UnsupportedOperationException();
+	}
+
+	public boolean addAll(int index, Collection c) {
+		throw new UnsupportedOperationException();
+	}
+
+	public Object set(int index, Object element) {
+		throw new UnsupportedOperationException();
+	}
+
+	public Object remove(int index) {
+		throw new UnsupportedOperationException();
+	}
+
+	public List subList(int fromIndex, int toIndex) {
+		throw new UnsupportedOperationException();
+	}
+
 	// #string_id_map#
 
+	@Override
 	protected int findPrototypeId(String s) {
 		int id;
 		// #generated# Last update: 2005-09-26 15:47:42 EDT
@@ -1354,6 +1943,9 @@ public class NativeArray extends IdScriptableObject implements Wrapper {
 				} else if (c == 's') {
 					X = "splice";
 					id = Id_splice;
+				} else if (c == 'r') {
+					X = "reduce";
+					id = Id_reduce;
 				}
 				break L;
 			case 7:
@@ -1394,6 +1986,9 @@ public class NativeArray extends IdScriptableObject implements Wrapper {
 				} else if (c == 'l') {
 					X = "lastIndexOf";
 					id = Id_lastIndexOf;
+				} else if (c == 'r') {
+					X = "reduceRight";
+					id = Id_reduceRight;
 				}
 				break L;
 			case 14:
@@ -1408,47 +2003,62 @@ public class NativeArray extends IdScriptableObject implements Wrapper {
 		return id;
 	}
 
-	/**
-	 * @see org.mozilla.javascript.Wrapper#unwrap()
-	 */
-	public Object unwrap() {
-		Object[] ids = getIds();
-
-		for (int i = 0; i < ids.length; i++) {
-			if (ids[i] instanceof String) {
-				return this;
-			}
-		}
-
-		ArrayList<Object> al = new ArrayList<Object>(ids.length);
-		for (int i = 0; i < ids.length; i++) {
-			if (ids[i] instanceof Number) {
-				int index = ((Number) ids[i]).intValue();
-				Object o = get(index, this);
-				if (o != NOT_FOUND) {
-					while (al.size() <= index)
-						al.add(null);
-					al.set(index, o);
-				}
-			}
-		}
-		return al.toArray();
-	}
-
 	private static final int Id_constructor = 1, Id_toString = 2,
 			Id_toLocaleString = 3, Id_toSource = 4, Id_join = 5,
 			Id_reverse = 6, Id_sort = 7, Id_push = 8, Id_pop = 9,
 			Id_shift = 10, Id_unshift = 11, Id_splice = 12, Id_concat = 13,
 			Id_slice = 14, Id_indexOf = 15, Id_lastIndexOf = 16, Id_every = 17,
 			Id_filter = 18, Id_forEach = 19, Id_map = 20, Id_some = 21,
+			Id_reduce = 22, Id_reduceRight = 23,
 
-			MAX_PROTOTYPE_ID = 21;
+			MAX_PROTOTYPE_ID = 23;
 
 	// #/string_id_map#
 
+	private static final int ConstructorId_join = -Id_join,
+			ConstructorId_reverse = -Id_reverse, ConstructorId_sort = -Id_sort,
+			ConstructorId_push = -Id_push, ConstructorId_pop = -Id_pop,
+			ConstructorId_shift = -Id_shift,
+			ConstructorId_unshift = -Id_unshift,
+			ConstructorId_splice = -Id_splice,
+			ConstructorId_concat = -Id_concat, ConstructorId_slice = -Id_slice,
+			ConstructorId_indexOf = -Id_indexOf,
+			ConstructorId_lastIndexOf = -Id_lastIndexOf,
+			ConstructorId_every = -Id_every, ConstructorId_filter = -Id_filter,
+			ConstructorId_forEach = -Id_forEach, ConstructorId_map = -Id_map,
+			ConstructorId_some = -Id_some, ConstructorId_reduce = -Id_reduce,
+			ConstructorId_reduceRight = -Id_reduceRight,
+			ConstructorId_isArray = -24;
+
+	/**
+	 * Internal representation of the JavaScript array's length property.
+	 */
 	private long length;
 
+	/**
+	 * Fast storage for dense arrays. Sparse arrays will use the superclass's
+	 * hashtable storage scheme.
+	 */
 	private Object[] dense;
 
-	private static final int maximumDenseLength = 10000;
+	/**
+	 * True if all numeric properties are stored in <code>dense</code>.
+	 */
+	private boolean denseOnly;
+
+	/**
+	 * The maximum size of <code>dense</code> that will be allocated initially.
+	 */
+	private static int maximumInitialCapacity = 10000;
+
+	/**
+	 * The default capacity for <code>dense</code>.
+	 */
+	private static final int DEFAULT_INITIAL_CAPACITY = 10;
+
+	/**
+	 * The factor to grow <code>dense</code> by.
+	 */
+	private static final double GROW_FACTOR = 1.5;
+	private static final int MAX_PRE_GROW_SIZE = (int) (Integer.MAX_VALUE / GROW_FACTOR);
 }
