@@ -41,29 +41,26 @@
 
 package org.mozilla.javascript.xmlimpl;
 
-import java.io.Serializable;
-import java.util.*;
-
-import org.w3c.dom.*;
-
 import org.mozilla.javascript.*;
+import org.mozilla.javascript.xml.XMLObject;
 
 class XML extends XMLObjectImpl {
 	static final long serialVersionUID = -630969919086449092L;
 
 	private XmlNode node;
 
-	XML() {
+	XML(XMLLibImpl lib, Scriptable scope, XMLObject prototype, XmlNode node) {
+		super(lib, scope, prototype);
+		initialize(node);
 	}
 
 	void initialize(XmlNode node) {
-		if (node == null)
-			throw new RuntimeException("Unreachable code: assertion failed.");
 		this.node = node;
 		this.node.setXml(this);
 	}
 
-	final XML XML() {
+	@Override
+	final XML getXML() {
 		return this;
 	}
 
@@ -78,57 +75,21 @@ class XML extends XMLObjectImpl {
 		}
 	}
 
-	private void ecmaPutAdd(XMLList insert, XML value) {
-		if (value.isAttribute()) {
-			value = toXML(XmlNode.createText(getProcessor(),
-					value.node.getAttributeValue()));
-		}
-		insert.addToList(value);
-	}
-
-	private void ecmaPut(XMLName name, XMLObjectImpl value) {
-		if (isText() || isComment() || isProcessingInstruction()
-				|| isAttribute())
-			return;
-		if (value instanceof XMLObjectImpl) {
-			value = value.copy();
-		}
-		XMLList insert = newXMLList();
-		if (value instanceof XML) {
-			ecmaPutAdd(insert, (XML) value);
-		} else {
-			XMLList list = (XMLList) value;
-			for (int i = 0; i < list.length(); i++) {
-				ecmaPutAdd(insert, list.item(i));
-			}
-		}
-		this.setChildren(insert);
-	}
-
-	/** @deprecated I would love to encapsulate this somehow. */
+	/* TODO: needs encapsulation. */
 	XML makeXmlFromString(XMLName name, String value) {
 		try {
-			return newTextElementXML(this.node, name.toQname(),
-					value.toString());
+			return newTextElementXML(this.node, name.toQname(), value);
 		} catch (Exception e) {
 			throw ScriptRuntime.typeError(e.getMessage());
 		}
 	}
 
-	/**
-	 * @deprecated Rename this, at the very least. But it's not clear it's even
-	 *             necessary
+	/*
+	 * TODO: Rename this, at the very least. But it's not clear it's even
+	 * necessary
 	 */
 	XmlNode getAnnotation() {
 		return node;
-	}
-
-	/** @deprecated */
-	private XmlNode.QName adapt(javax.xml.namespace.QName targetProperty) {
-		if (targetProperty == null)
-			return null;
-		return XmlNode.QName.create(targetProperty.getNamespaceURI(),
-				targetProperty.getLocalPart(), targetProperty.getPrefix());
 	}
 
 	//
@@ -138,6 +99,7 @@ class XML extends XMLObjectImpl {
 	// TODO Either cross-reference this next comment with the specification or
 	// delete it and change the behavior
 	// The comment: XML[0] should return this, all other indexes are Undefined
+	@Override
 	public Object get(int index, Scriptable start) {
 		if (index == 0) {
 			return this;
@@ -146,10 +108,12 @@ class XML extends XMLObjectImpl {
 		}
 	}
 
+	@Override
 	public boolean has(int index, Scriptable start) {
 		return (index == 0);
 	}
 
+	@Override
 	public void put(int index, Scriptable start, Object value) {
 		// TODO Clarify the following comment and add a reference to the spec
 		// The comment: Spec says assignment to indexed XML object should return
@@ -158,15 +122,17 @@ class XML extends XMLObjectImpl {
 				.typeError("Assignment to indexed XML is not allowed");
 	}
 
+	@Override
 	public Object[] getIds() {
 		if (isPrototype()) {
 			return new Object[0];
 		} else {
-			return new Object[] { new Integer(0) };
+			return new Object[] { Integer.valueOf(0) };
 		}
 	}
 
 	// TODO This is how I found it but I am not sure it makes sense
+	@Override
 	public void delete(int index) {
 		if (index == 0) {
 			this.remove();
@@ -177,6 +143,7 @@ class XML extends XMLObjectImpl {
 	// Methods from XMLObjectImpl
 	//
 
+	@Override
 	boolean hasXMLProperty(XMLName xmlName) {
 		if (isPrototype()) {
 			return getMethod(xmlName.localName()) != NOT_FOUND;
@@ -186,6 +153,7 @@ class XML extends XMLObjectImpl {
 		}
 	}
 
+	@Override
 	Object getXMLProperty(XMLName xmlName) {
 		if (isPrototype()) {
 			return getMethod(xmlName.localName());
@@ -229,6 +197,7 @@ class XML extends XMLObjectImpl {
 		return name.getMyValueOn(this);
 	}
 
+	@Override
 	void deleteXMLProperty(XMLName name) {
 		XMLList list = getPropertyList(name);
 		for (int i = 0; i < list.length(); i++) {
@@ -236,6 +205,7 @@ class XML extends XMLObjectImpl {
 		}
 	}
 
+	@Override
 	void putXMLProperty(XMLName xmlName, Object value) {
 		if (isPrototype()) {
 			// TODO Is this really a no-op? Check the spec to be sure
@@ -244,6 +214,7 @@ class XML extends XMLObjectImpl {
 		}
 	}
 
+	@Override
 	boolean hasOwnProperty(XMLName xmlName) {
 		boolean hasProperty = false;
 
@@ -257,6 +228,7 @@ class XML extends XMLObjectImpl {
 		return hasProperty;
 	}
 
+	@Override
 	protected Object jsConstructor(Context cx, boolean inNewExpr, Object[] args) {
 		if (args.length == 0 || args[0] == null
 				|| args[0] == Undefined.instance) {
@@ -273,6 +245,7 @@ class XML extends XMLObjectImpl {
 	}
 
 	// See ECMA 357, 11_2_2_1, Semantics, 3_f.
+	@Override
 	public Scriptable getExtraMethodSource(Context cx) {
 		if (hasSimpleContent()) {
 			String src = toString();
@@ -286,9 +259,10 @@ class XML extends XMLObjectImpl {
 	//
 
 	void removeChild(int index) {
-		this.node.removeChild((int) index);
+		this.node.removeChild(index);
 	}
 
+	@Override
 	void normalize() {
 		this.node.normalize();
 	}
@@ -316,10 +290,12 @@ class XML extends XMLObjectImpl {
 		this.node.deleteMe();
 	}
 
+	@Override
 	void addMatches(XMLList rv, XMLName name) {
 		name.addMatches(rv, this);
 	}
 
+	@Override
 	XMLList elements(XMLName name) {
 		XMLList rv = newXMLList();
 		rv.setTargets(this, name.toQname());
@@ -334,6 +310,7 @@ class XML extends XMLObjectImpl {
 		return rv;
 	}
 
+	@Override
 	XMLList child(XMLName xmlName) {
 		// TODO Right now I think this method would allow child( "@xxx" ) to
 		// return the xxx attribute, which is wrong
@@ -360,6 +337,7 @@ class XML extends XMLObjectImpl {
 		return this;
 	}
 
+	@Override
 	XMLList children() {
 		XMLList rv = newXMLList();
 		XMLName all = XMLName.formStar();
@@ -371,6 +349,7 @@ class XML extends XMLObjectImpl {
 		return rv;
 	}
 
+	@Override
 	XMLList child(int index) {
 		// ECMA357 13.4.4.6 (numeric case)
 		XMLList result = newXMLList();
@@ -382,7 +361,7 @@ class XML extends XMLObjectImpl {
 	}
 
 	XML getXmlChild(int index) {
-		XmlNode child = this.node.getChild((int) index);
+		XmlNode child = this.node.getChild(index);
 		if (child.getXml() == null) {
 			child.setXml(newXML(child));
 		}
@@ -393,6 +372,7 @@ class XML extends XMLObjectImpl {
 		return this.node.getChildIndex();
 	}
 
+	@Override
 	boolean contains(Object xml) {
 		if (xml instanceof XML) {
 			return equivalentXml(xml);
@@ -402,6 +382,7 @@ class XML extends XMLObjectImpl {
 	}
 
 	// Method overriding XMLObjectImpl
+	@Override
 	boolean equivalentXml(Object target) {
 		boolean result = false;
 
@@ -415,7 +396,7 @@ class XML extends XMLObjectImpl {
 			XMLList otherList = (XMLList) target;
 
 			if (otherList.length() == 1) {
-				result = equivalentXml(otherList.XML());
+				result = equivalentXml(otherList.getXML());
 			}
 		} else if (hasSimpleContent()) {
 			String otherStr = ScriptRuntime.toString(target);
@@ -426,10 +407,12 @@ class XML extends XMLObjectImpl {
 		return result;
 	}
 
+	@Override
 	XMLObjectImpl copy() {
 		return newXML(this.node.copy());
 	}
 
+	@Override
 	boolean hasSimpleContent() {
 		if (isComment() || isProcessingInstruction())
 			return false;
@@ -438,6 +421,7 @@ class XML extends XMLObjectImpl {
 		return !this.node.hasChildElement();
 	}
 
+	@Override
 	boolean hasComplexContent() {
 		return !hasSimpleContent();
 	}
@@ -445,6 +429,7 @@ class XML extends XMLObjectImpl {
 	// TODO Cross-reference comment below with spec
 	// Comment is: Length of an XML object is always 1, it's a list of XML
 	// objects of size 1.
+	@Override
 	int length() {
 		return 1;
 	}
@@ -458,6 +443,7 @@ class XML extends XMLObjectImpl {
 		return ecmaClass();
 	}
 
+	@Override
 	Object parent() {
 		XmlNode parent = this.node.parent();
 		if (parent == null)
@@ -465,6 +451,7 @@ class XML extends XMLObjectImpl {
 		return newXML(this.node.parent());
 	}
 
+	@Override
 	boolean propertyIsEnumerable(Object name) {
 		boolean result;
 		if (name instanceof Integer) {
@@ -479,6 +466,7 @@ class XML extends XMLObjectImpl {
 		return result;
 	}
 
+	@Override
 	Object valueOf() {
 		return this;
 	}
@@ -487,18 +475,21 @@ class XML extends XMLObjectImpl {
 	// Selection of children
 	//
 
+	@Override
 	XMLList comments() {
 		XMLList rv = newXMLList();
 		this.node.addMatchingChildren(rv, XmlNode.Filter.COMMENT);
 		return rv;
 	}
 
+	@Override
 	XMLList text() {
 		XMLList rv = newXMLList();
 		this.node.addMatchingChildren(rv, XmlNode.Filter.TEXT);
 		return rv;
 	}
 
+	@Override
 	XMLList processingInstructions(XMLName xmlName) {
 		XMLList rv = newXMLList();
 		this.node.addMatchingChildren(rv,
@@ -533,10 +524,10 @@ class XML extends XMLObjectImpl {
 	}
 
 	XML replace(int index, Object xml) {
-		XMLList xlChildToReplace = (XMLList) child(index);
+		XMLList xlChildToReplace = child(index);
 		if (xlChildToReplace.length() > 0) {
 			// One exists an that index
-			XML childToReplace = (XML) xlChildToReplace.item(0);
+			XML childToReplace = xlChildToReplace.item(0);
 			insertChildAfter(childToReplace, xml);
 			removeChild(index);
 		}
@@ -737,6 +728,7 @@ class XML extends XMLObjectImpl {
 		}
 	}
 
+	@Override
 	public String getClassName() {
 		// TODO: This appears to confuse the interpreter if we use the "real"
 		// class property from ECMA. Otherwise this code
@@ -760,9 +752,10 @@ class XML extends XMLObjectImpl {
 				XmlNode child = this.node.getChild(i);
 				if (!child.isProcessingInstructionType()
 						&& !child.isCommentType()) {
-					// TODO Probably inefficient; taking clean non-optimized
+					// TODO: Probably inefficient; taking clean non-optimized
 					// solution for now
-					XML x = newXML(child);
+					XML x = new XML(getLib(), getParentScope(),
+							(XMLObject) getPrototype(), child);
 					rv.append(x.toString());
 				}
 			}
@@ -771,10 +764,17 @@ class XML extends XMLObjectImpl {
 		return toXMLString();
 	}
 
+	@Override
 	public String toString() {
 		return ecmaToString();
 	}
 
+	@Override
+	String toSource(int indent) {
+		return toXMLString();
+	}
+
+	@Override
 	String toXMLString() {
 		return this.node.ecmaToXMLString(getProcessor());
 	}
